--- a/docs/professor/amilcar_machado_profeta_filho.mdx
+++ b/docs/professor/amilcar_machado_profeta_filho.mdx
@@ -14,20 +14,28 @@ const data = {
           time: "07:30 - 08:20"
         },
         {
-          subject: "Legislação e ética profissional - 2229",
+          subject: "História II - 1089",
           size: 1,
+          teacher: "Amilcar Machado Profeta Filho",
+          classroom: "",
+          students: "AGO2021",
+          time: "08:20 - 09:10"
+        },
+        {
+          subject: "Legislação e ética profissional - 2229",
+          size: 2,
           teacher: "Amilcar Machado Profeta Filho",
           classroom: "",
           students: "ELE2022",
-          time: "21:50 - 22:40"
+          time: "19:00 - 19:50"
         },
         {
-          subject: "Ética e Responsabilidade Social e Ambiental - 1497",
+          subject: "PCCC 7  - Temas transversais - 1549",
           size: 1,
           teacher: "Amilcar Machado Profeta Filho",
           classroom: "",
-          students: "TGC2022",
-          time: "21:00 - 21:50"
+          students: "BIO2020",
+          time: "21:50 - 22:40"
         }
       ]
     },
@@ -35,20 +43,12 @@ const data = {
       title: "Terça-Feira",
       timetable: [
         {
-          subject: "História II - 1089",
+          subject: "PCCC 7  - Temas transversais - 1549",
           size: 1,
           teacher: "Amilcar Machado Profeta Filho",
           classroom: "",
-          students: "AGO2021",
-          time: "15:55 - 16:45"
-        },
-        {
-          subject: "Ética e Responsabilidade Social e Ambiental - 1497",
-          size: 1,
-          teacher: "Amilcar Machado Profeta Filho",
-          classroom: "",
-          students: "TGC2022",
-          time: "21:00 - 21:50"
+          students: "BIO2020",
+          time: "21:50 - 22:40"
         }
       ]
     },
@@ -61,43 +61,25 @@ const data = {
           teacher: "Amilcar Machado Profeta Filho",
           classroom: "",
           students: "BIO2020",
+          time: "21:00 - 21:50"
+        },
+        {
+          subject: "Ética e Responsabilidade Social e Ambiental - 1497",
+          size: 2,
+          teacher: "Amilcar Machado Profeta Filho",
+          classroom: "",
+          students: "TGC2022",
           time: "19:00 - 19:50"
         }
       ]
     },
     {
       title: "Quinta-Feira",
-      timetable: [
-        {
-          subject: "PCCC 7  - Temas transversais - 1549",
-          size: 1,
-          teacher: "Amilcar Machado Profeta Filho",
-          classroom: "",
-          students: "BIO2020",
-          time: "19:00 - 19:50"
-        }
-      ]
+      timetable: []
     },
     {
       title: "Sexta-Feira",
-      timetable: [
-        {
-          subject: "Legislação e ética profissional - 2229",
-          size: 1,
-          teacher: "Amilcar Machado Profeta Filho",
-          classroom: "",
-          students: "ELE2022",
-          time: "19:50 - 20:40"
-        },
-        {
-          subject: "PCCC 7  - Temas transversais - 1549",
-          size: 1,
-          teacher: "Amilcar Machado Profeta Filho",
-          classroom: "",
-          students: "BIO2020",
-          time: "21:50 - 22:40"
-        }
-      ]
+      timetable: []
     }
   ],
   time: [
