--- a/docs/professor/caroline_domingues_porto_do_nascimento_barbieri.mdx
+++ b/docs/professor/caroline_domingues_porto_do_nascimento_barbieri.mdx
@@ -6,19 +6,6 @@ const data = {
       title: "Segunda-Feira",
       timetable: [
         {
-          subject: "Testes, Verificação e Validação de Sistemas - 723",
-          size: 1,
-          teacher: "Caroline Domingues Porto do Nascimento Barbieri",
-          classroom: "",
-          students: "TDS2023-3S",
-          time: "19:00 - 19:50"
-        }
-      ]
-    },
-    {
-      title: "Terça-Feira",
-      timetable: [
-        {
           subject: "Fundamentos de informática - 1076",
           size: 2,
           teacher: "Caroline Domingues Porto do Nascimento Barbieri",
@@ -29,21 +16,26 @@ const data = {
       ]
     },
     {
+      title: "Terça-Feira",
+      timetable: [
+        {
+          subject: "Lógica de programação - 1075",
+          size: 2,
+          teacher: "Caroline Domingues Porto do Nascimento Barbieri",
+          classroom: "",
+          students: "IIW2023B",
+          time: "07:30 - 08:20"
+        }
+      ]
+    },
+    {
       title: "Quarta-Feira",
       timetable: [
         {
-          subject: "Desenvolvimento Baseado em Padrões e Frameworks - 726",
-          size: 1,
-          teacher: "Caroline Domingues Porto do Nascimento Barbieri",
-          classroom: "",
-          students: "TDS2023-3S",
-          time: "19:50 - 20:40"
-        },
-        {
-          subject: "Projeto integrador I - 1078",
+          subject: "Fundamentos de informática - 1076",
           size: 2,
           teacher: "Caroline Domingues Porto do Nascimento Barbieri",
-          classroom: "Laboratório de Informatica BioPark",
+          classroom: "",
           students: "IIW2023B",
           time: "09:25 - 10:15"
         }
@@ -53,20 +45,12 @@ const data = {
       title: "Quinta-Feira",
       timetable: [
         {
-          subject: "Desenvolvimento Baseado em Padrões e Frameworks - 726",
-          size: 1,
+          subject: "Lógica de programação - 1075",
+          size: 2,
           teacher: "Caroline Domingues Porto do Nascimento Barbieri",
           classroom: "",
-          students: "TDS2023-3S",
-          time: "21:00 - 21:50"
-        },
-        {
-          subject: "Testes, Verificação e Validação de Sistemas - 723",
-          size: 1,
-          teacher: "Caroline Domingues Porto do Nascimento Barbieri",
-          classroom: "",
-          students: "TDS2023-3S",
-          time: "19:50 - 20:40"
+          students: "IIW2023A",
+          time: "10:15 - 11:05"
         }
       ]
     },
@@ -74,12 +58,20 @@ const data = {
       title: "Sexta-Feira",
       timetable: [
         {
+          subject: "Desenvolvimento Baseado em Padrões e Frameworks - 726",
+          size: 2,
+          teacher: "Caroline Domingues Porto do Nascimento Barbieri",
+          classroom: "",
+          students: "TDS2023-3S",
+          time: "19:00 - 19:50"
+        },
+        {
           subject: "Serviços em nuvem - 1250",
           size: 2,
           teacher: "Caroline Domingues Porto do Nascimento Barbieri",
           classroom: "",
           students: "IIW2021",
-          time: "09:25 - 10:15"
+          time: "10:15 - 11:05"
         }
       ]
     }
