--- a/docs/professor/darlan_roque_dapieve.mdx
+++ b/docs/professor/darlan_roque_dapieve.mdx
@@ -4,107 +4,19 @@ const data = {
   weekClasses: [
     {
       title: "Segunda-Feira",
-      timetable: [
-        {
-          subject: "Cálculo Mecânico - 154",
-          size: 1,
-          teacher: "Darlan Roque Dapieve",
-          classroom: "",
-          students: "EIN2022",
-          time: "10:15 - 11:05"
-        },
-        {
-          subject: "Cálculo Mecânico - 154",
-          size: 1,
-          teacher: "Darlan Roque Dapieve",
-          classroom: "",
-          students: "EIN2022",
-          time: "07:30 - 08:20"
-        },
-        {
-          subject: "Desenho Técnico 2 - 132",
-          size: 1,
-          teacher: "Darlan Roque Dapieve",
-          classroom: "",
-          students: "ELM2023",
-          time: "21:50 - 22:40"
-        },
-        {
-          subject: "Desenho Técnico 2 - 132",
-          size: 1,
-          teacher: "Darlan Roque Dapieve",
-          classroom: "",
-          students: "ELM2023",
-          time: "19:50 - 20:40"
-        },
-        {
-          subject: "Resistência dos Materiais - 109",
-          size: 1,
-          teacher: "Darlan Roque Dapieve",
-          classroom: "",
-          students: "ELM2022",
-          time: "19:00 - 19:50"
-        }
-      ]
+      timetable: []
     },
     {
       title: "Terça-Feira",
       timetable: [
         {
-          subject: "Resistência dos Materiais - 109",
-          size: 1,
-          teacher: "Darlan Roque Dapieve",
-          classroom: "",
-          students: "ELM2022",
-          time: "21:50 - 22:40"
-        },
-        {
-          subject: "Tecnologia dos Materiais - 1531",
-          size: 1,
-          teacher: "Darlan Roque Dapieve",
-          classroom: "",
-          students: "EIN2023",
-          time: "11:05 - 11:55"
-        }
-      ]
-    },
-    {
-      title: "Quarta-Feira",
-      timetable: [
-        {
-          subject: "Resistência dos Materiais - 109",
-          size: 1,
-          teacher: "Darlan Roque Dapieve",
-          classroom: "",
-          students: "ELM2022",
-          time: "21:00 - 21:50"
-        }
-      ]
-    },
-    {
-      title: "Quinta-Feira",
-      timetable: [
-        {
           subject: "Desenho Técnico 2 - 132",
-          size: 1,
+          size: 2,
           teacher: "Darlan Roque Dapieve",
           classroom: "",
           students: "ELM2023",
           time: "19:00 - 19:50"
         },
-        {
-          subject: "Desenho Técnico 2 - 132",
-          size: 1,
-          teacher: "Darlan Roque Dapieve",
-          classroom: "",
-          students: "ELM2023",
-          time: "19:50 - 20:40"
-        }
-      ]
-    },
-    {
-      title: "Sexta-Feira",
-      timetable: [
         {
           subject: "Manutenção Industrial e Gestão da Produção - 1592",
           size: 1,
@@ -114,22 +26,60 @@ const data = {
           time: "07:30 - 08:20"
         },
         {
-          subject: "Resistência dos Materiais - 109",
-          size: 1,
-          teacher: "Darlan Roque Dapieve",
-          classroom: "",
-          students: "ELM2022",
-          time: "21:50 - 22:40"
-        },
-        {
           subject: "Tecnologia dos Materiais - 1531",
-          size: 1,
+          size: 2,
           teacher: "Darlan Roque Dapieve",
           classroom: "",
           students: "EIN2023",
           time: "10:15 - 11:05"
         }
       ]
+    },
+    {
+      title: "Quarta-Feira",
+      timetable: [
+        {
+          subject: "Desenho Técnico 2 - 132",
+          size: 2,
+          teacher: "Darlan Roque Dapieve",
+          classroom: "",
+          students: "ELM2023",
+          time: "19:00 - 19:50"
+        }
+      ]
+    },
+    {
+      title: "Quinta-Feira",
+      timetable: [
+        {
+          subject: "Cálculo Mecânico - 154",
+          size: 2,
+          teacher: "Darlan Roque Dapieve",
+          classroom: "",
+          students: "EIN2022",
+          time: "10:15 - 11:05"
+        },
+        {
+          subject: "Resistência dos Materiais - 109",
+          size: 2,
+          teacher: "Darlan Roque Dapieve",
+          classroom: "",
+          students: "ELM2022",
+          time: "19:00 - 19:50"
+        },
+        {
+          subject: "Resistência dos Materiais - 109",
+          size: 2,
+          teacher: "Darlan Roque Dapieve",
+          classroom: "",
+          students: "ELM2022",
+          time: "21:00 - 21:50"
+        }
+      ]
+    },
+    {
+      title: "Sexta-Feira",
+      timetable: []
     }
   ],
   time: [
