--- a/docs/professor/douglas_barbosa_sousa.mdx
+++ b/docs/professor/douglas_barbosa_sousa.mdx
@@ -6,16 +6,16 @@ const data = {
       title: "Segunda-Feira",
       timetable: [
         {
-          subject: "Programação Orientada a Objetos - 21",
-          size: 1,
+          subject: "Linguagem de Programação - 14",
+          size: 2,
           teacher: "Douglas Barbosa Sousa",
           classroom: "",
           students: "TADS_ESP",
-          time: "19:50 - 20:40"
+          time: "21:00 - 21:50"
         },
         {
           subject: "Programação Orientada a Objetos - 21",
-          size: 1,
+          size: 2,
           teacher: "Douglas Barbosa Sousa",
           classroom: "",
           students: "TADS_ESP",
@@ -27,16 +27,8 @@ const data = {
       title: "Terça-Feira",
       timetable: [
         {
-          subject: "Banco de Dados II - 13",
-          size: 1,
-          teacher: "Douglas Barbosa Sousa",
-          classroom: "",
-          students: "TADS_ESP",
-          time: "21:50 - 22:40"
-        },
-        {
           subject: "Linguagem de Programação - 14",
-          size: 1,
+          size: 2,
           teacher: "Douglas Barbosa Sousa",
           classroom: "",
           students: "TADS_ESP",
@@ -46,51 +38,18 @@ const data = {
     },
     {
       title: "Quarta-Feira",
-      timetable: [
-        {
-          subject: "Linguagem de Programação - 14",
-          size: 1,
-          teacher: "Douglas Barbosa Sousa",
-          classroom: "",
-          students: "TADS_ESP",
-          time: "19:50 - 20:40"
-        },
-        {
-          subject: "Linguagem de Programação - 14",
-          size: 1,
-          teacher: "Douglas Barbosa Sousa",
-          classroom: "",
-          students: "TADS_ESP",
-          time: "19:00 - 19:50"
-        }
-      ]
+      timetable: []
     },
     {
       title: "Quinta-Feira",
       timetable: [
         {
           subject: "Banco de Dados II - 13",
-          size: 1,
+          size: 2,
           teacher: "Douglas Barbosa Sousa",
           classroom: "",
           students: "TADS_ESP",
-          time: "19:00 - 19:50"
-        },
-        {
-          subject: "Linguagem de Programação - 14",
-          size: 1,
-          teacher: "Douglas Barbosa Sousa",
-          classroom: "",
-          students: "TADS_ESP",
-          time: "19:50 - 20:40"
-        },
-        {
-          subject: "Programação Orientada a Objetos - 21",
-          size: 1,
-          teacher: "Douglas Barbosa Sousa",
-          classroom: "",
-          students: "TADS_ESP",
-          time: "21:50 - 22:40"
+          time: "21:00 - 21:50"
         }
       ]
     },
@@ -98,20 +57,12 @@ const data = {
       title: "Sexta-Feira",
       timetable: [
         {
-          subject: "Laboratório de Banco de Dados - 1238",
+          subject: "Programação Orientada a Objetos - 21",
           size: 2,
           teacher: "Douglas Barbosa Sousa",
           classroom: "",
-          students: "IIW2022A",
-          time: "09:25 - 10:15"
-        },
-        {
-          subject: "Programação Orientada a Objetos - 21",
-          size: 1,
-          teacher: "Douglas Barbosa Sousa",
-          classroom: "",
           students: "TADS_ESP",
-          time: "19:00 - 19:50"
+          time: "21:00 - 21:50"
         }
       ]
     }
