--- a/docs/professor/eduardo_alberto_felippsen.mdx
+++ b/docs/professor/eduardo_alberto_felippsen.mdx
@@ -6,28 +6,20 @@ const data = {
       title: "Segunda-Feira",
       timetable: [
         {
-          subject: "Fundamentos de informática - 1076",
+          subject: "Projeto Integrador II - 1239",
           size: 2,
           teacher: "Eduardo Alberto Felippsen",
-          classroom: "Laboratório de Informatica BioPark",
-          students: "IIW2023B",
+          classroom: "",
+          students: "IIW2022B",
           time: "07:30 - 08:20"
         },
         {
-          subject: "Tecnologias WEB - 17",
-          size: 2,
-          teacher: "Eduardo Alberto Felippsen",
-          classroom: "",
-          students: "TADS_ESP",
-          time: "21:00 - 21:50"
-        },
-        {
-          subject: "Lógica de Programação - 1483",
+          subject: "Linguagem de Programação - 1484",
           size: 1,
-          teacher: "Olavo José Luiz Junior+Eduardo Alberto Felippsen",
+          teacher: "Eduardo Alberto Felippsen+Olavo José Luiz Junior",
           classroom: "",
           students: "TPS2023-1",
-          time: "15:05 - 15:55"
+          time: "14:00 - 14:50"
         }
       ]
     },
@@ -41,53 +33,36 @@ const data = {
           classroom: "",
           students: "TADS_ESP",
           time: "19:00 - 19:50"
-        },
-        {
-          subject: "Linguagem de Programação - 1484",
-          size: 1,
-          teacher: "Eduardo Alberto Felippsen+Olavo José Luiz Junior",
-          classroom: "",
-          students: "TPS2023-1",
-          time: "13:10 - 14:00"
-        },
-        {
-          subject: "Lógica de Programação - 1483",
-          size: 1,
-          teacher: "Olavo José Luiz Junior+Eduardo Alberto Felippsen",
-          classroom: "",
-          students: "TPS2023-1",
-          time: "14:00 - 14:50"
         }
       ]
     },
     {
       title: "Quarta-Feira",
-      timetable: [
-        {
-          subject: "Linguagem de Programação - 1484",
-          size: 1,
-          teacher: "Eduardo Alberto Felippsen+Olavo José Luiz Junior",
-          classroom: "",
-          students: "TPS2023-1",
-          time: "15:55 - 16:45"
-        },
-        {
-          subject: "Lógica de Programação - 1483",
-          size: 1,
-          teacher: "Olavo José Luiz Junior+Eduardo Alberto Felippsen",
-          classroom: "",
-          students: "TPS2023-1",
-          time: "15:05 - 15:55"
-        }
-      ]
+      timetable: []
     },
     {
       title: "Quinta-Feira",
       timetable: [
         {
-          subject: "Linguagem de Programação - 1484",
+          subject: "Tecnologias WEB - 17",
+          size: 2,
+          teacher: "Eduardo Alberto Felippsen",
+          classroom: "",
+          students: "TADS_ESP",
+          time: "19:00 - 19:50"
+        },
+        {
+          subject: "Lógica de Programação - 1483",
+          size: 2,
+          teacher: "Olavo José Luiz Junior+Eduardo Alberto Felippsen",
+          classroom: "",
+          students: "TPS2023-1",
+          time: "15:05 - 15:55"
+        },
+        {
+          subject: "Lógica de Programação - 1483",
           size: 1,
-          teacher: "Eduardo Alberto Felippsen+Olavo José Luiz Junior",
+          teacher: "Olavo José Luiz Junior+Eduardo Alberto Felippsen",
           classroom: "",
           students: "TPS2023-1",
           time: "14:00 - 14:50"
@@ -96,7 +71,16 @@ const data = {
     },
     {
       title: "Sexta-Feira",
-      timetable: []
+      timetable: [
+        {
+          subject: "Linguagem de Programação - 1484",
+          size: 2,
+          teacher: "Eduardo Alberto Felippsen+Olavo José Luiz Junior",
+          classroom: "",
+          students: "TPS2023-1",
+          time: "15:05 - 15:55"
+        }
+      ]
     }
   ],
   time: [
