--- a/docs/professor/gabriele_antico_freiria.mdx
+++ b/docs/professor/gabriele_antico_freiria.mdx
@@ -4,7 +4,31 @@ const data = {
   weekClasses: [
     {
       title: "Segunda-Feira",
+      timetable: []
+    },
+    {
+      title: "Terça-Feira",
+      timetable: []
+    },
+    {
+      title: "Quarta-Feira",
       timetable: [
+        {
+          subject: "Biologia III - 1241",
+          size: 2,
+          teacher: "Gabriele Antico Freiria",
+          classroom: "",
+          students: "IIW2021",
+          time: "07:30 - 08:20"
+        },
+        {
+          subject: "Genética molecular - 85",
+          size: 1,
+          teacher: "Gabriele Antico Freiria",
+          classroom: "",
+          students: "BIO2020",
+          time: "19:50 - 20:40"
+        },
         {
           subject: "PCCC 2 - Sexualidade e gênero - 498",
           size: 1,
@@ -16,16 +40,8 @@ const data = {
       ]
     },
     {
-      title: "Terça-Feira",
+      title: "Quinta-Feira",
       timetable: [
-        {
-          subject: "Biologia III - 1241",
-          size: 2,
-          teacher: "Gabriele Antico Freiria",
-          classroom: "",
-          students: "IIW2021",
-          time: "09:25 - 10:15"
-        },
         {
           subject: "Genética molecular - 85",
           size: 1,
@@ -34,19 +50,6 @@ const data = {
           students: "BIO2020",
           time: "19:00 - 19:50"
         },
-        {
-          subject: "Genética molecular - 85",
-          size: 1,
-          teacher: "Gabriele Antico Freiria",
-          classroom: "",
-          students: "BIO2020",
-          time: "21:00 - 21:50"
-        }
-      ]
-    },
-    {
-      title: "Quarta-Feira",
-      timetable: [
         {
           subject: "Genética molecular - 85",
           size: 1,
@@ -62,11 +65,19 @@ const data = {
           classroom: "",
           students: "BIO_ESPECIAL_2",
           time: "19:50 - 20:40"
+        },
+        {
+          subject: "PCCC 2 - Sexualidade e gênero - 498",
+          size: 1,
+          teacher: "Gabriele Antico Freiria",
+          classroom: "",
+          students: "BIO_ESPECIAL_2",
+          time: "21:50 - 22:40"
         }
       ]
     },
     {
-      title: "Quinta-Feira",
+      title: "Sexta-Feira",
       timetable: [
         {
           subject: "Genética molecular - 85",
@@ -75,19 +86,6 @@ const data = {
           classroom: "",
           students: "BIO2020",
           time: "21:00 - 21:50"
-        }
-      ]
-    },
-    {
-      title: "Sexta-Feira",
-      timetable: [
-        {
-          subject: "PCCC 2 - Sexualidade e gênero - 498",
-          size: 1,
-          teacher: "Gabriele Antico Freiria",
-          classroom: "",
-          students: "BIO_ESPECIAL_2",
-          time: "19:00 - 19:50"
         }
       ]
     }
