--- a/docs/professor/katia_cristiane_kobus_novaes.mdx
+++ b/docs/professor/katia_cristiane_kobus_novaes.mdx
@@ -6,115 +6,15 @@ const data = {
       title: "Segunda-Feira",
       timetable: [
         {
-          subject: "Comunicação e Expressão - 128",
-          size: 1,
-          teacher: "Kátia Cristiane Kobus Novaes",
-          classroom: "",
-          students: "ELM2023",
-          time: "21:00 - 21:50"
-        },
-        {
-          subject: "Lingua Portuguesa 1 - 138",
-          size: 1,
-          teacher: "Kátia Cristiane Kobus Novaes",
-          classroom: "",
-          students: "EIN2023",
-          time: "10:15 - 11:05"
-        },
-        {
-          subject: "Lingua Portuguesa 1 - 138",
-          size: 1,
-          teacher: "Kátia Cristiane Kobus Novaes",
-          classroom: "",
-          students: "EIN2023",
-          time: "09:25 - 10:15"
-        }
-      ]
-    },
-    {
-      title: "Terça-Feira",
-      timetable: [
-        {
           subject: "Comunicação e Expressão - 598",
-          size: 1,
+          size: 2,
           teacher: "Kátia Cristiane Kobus Novaes",
           classroom: "",
           students: "ELE2023",
           time: "19:00 - 19:50"
-        }
-      ]
-    },
-    {
-      title: "Quarta-Feira",
-      timetable: [
-        {
-          subject: "Comunicação e Expressão - 128",
-          size: 1,
-          teacher: "Kátia Cristiane Kobus Novaes",
-          classroom: "",
-          students: "ELM2023",
-          time: "19:50 - 20:40"
         },
-        {
-          subject: "Lingua Portuguesa 4 - 232",
-          size: 1,
-          teacher: "Kátia Cristiane Kobus Novaes",
-          classroom: "",
-          students: "EIN2020",
-          time: "07:30 - 08:20"
-        }
-      ]
-    },
-    {
-      title: "Quinta-Feira",
-      timetable: [
         {
           subject: "Lingua Estrangeira Moderna 1 - Inglês - 179",
-          size: 1,
-          teacher: "Kátia Cristiane Kobus Novaes",
-          classroom: "",
-          students: "EIN2022",
-          time: "08:20 - 09:10"
-        },
-        {
-          subject: "Lingua Portuguesa 2 - 183",
-          size: 1,
-          teacher: "Kátia Cristiane Kobus Novaes",
-          classroom: "",
-          students: "EIN2022",
-          time: "07:30 - 08:20"
-        },
-        {
-          subject: "Lingua Portuguesa 3 - 209",
-          size: 1,
-          teacher: "Kátia Cristiane Kobus Novaes",
-          classroom: "",
-          students: "EIN2021",
-          time: "10:15 - 11:05"
-        },
-        {
-          subject: "Lingua Portuguesa 3 - 209",
-          size: 1,
-          teacher: "Kátia Cristiane Kobus Novaes",
-          classroom: "",
-          students: "EIN2021",
-          time: "09:25 - 10:15"
-        }
-      ]
-    },
-    {
-      title: "Sexta-Feira",
-      timetable: [
-        {
-          subject: "Comunicação e Expressão - 598",
-          size: 1,
-          teacher: "Kátia Cristiane Kobus Novaes",
-          classroom: "",
-          students: "ELE2023",
-          time: "21:00 - 21:50"
-        },
-        {
-          subject: "Lingua Portuguesa 2 - 183",
           size: 1,
           teacher: "Kátia Cristiane Kobus Novaes",
           classroom: "",
@@ -123,10 +23,61 @@ const data = {
         },
         {
           subject: "Lingua Portuguesa 4 - 232",
-          size: 1,
+          size: 2,
           teacher: "Kátia Cristiane Kobus Novaes",
           classroom: "",
           students: "EIN2020",
+          time: "09:25 - 10:15"
+        }
+      ]
+    },
+    {
+      title: "Terça-Feira",
+      timetable: []
+    },
+    {
+      title: "Quarta-Feira",
+      timetable: [
+        {
+          subject: "Lingua Portuguesa 2 - 183",
+          size: 2,
+          teacher: "Kátia Cristiane Kobus Novaes",
+          classroom: "",
+          students: "EIN2022",
+          time: "07:30 - 08:20"
+        }
+      ]
+    },
+    {
+      title: "Quinta-Feira",
+      timetable: [
+        {
+          subject: "Lingua Portuguesa 1 - 138",
+          size: 2,
+          teacher: "Kátia Cristiane Kobus Novaes",
+          classroom: "",
+          students: "EIN2023",
+          time: "07:30 - 08:20"
+        }
+      ]
+    },
+    {
+      title: "Sexta-Feira",
+      timetable: [
+        {
+          subject: "Comunicação e Expressão - 128",
+          size: 2,
+          teacher: "Kátia Cristiane Kobus Novaes",
+          classroom: "",
+          students: "ELM2023",
+          time: "19:00 - 19:50"
+        },
+        {
+          subject: "Lingua Portuguesa 3 - 209",
+          size: 2,
+          teacher: "Kátia Cristiane Kobus Novaes",
+          classroom: "",
+          students: "EIN2021",
           time: "10:15 - 11:05"
         }
       ]
