--- a/docs/professor/michelli_cristina_galli.mdx
+++ b/docs/professor/michelli_cristina_galli.mdx
@@ -6,12 +6,12 @@ const data = {
       title: "Segunda-Feira",
       timetable: [
         {
-          subject: "Língua Portuguesa e Literatura I - 1069",
-          size: 2,
+          subject: "Lingua Estrangeira Moderna - Espanhol - 1540",
+          size: 1,
           teacher: "Michelli Cristina Galli",
           classroom: "",
-          students: "IIW2023A",
-          time: "09:25 - 10:15"
+          students: "EIN2023",
+          time: "07:30 - 08:20"
         }
       ]
     },
@@ -19,21 +19,17 @@ const data = {
       title: "Terça-Feira",
       timetable: [
         {
-          subject: "Língua Portuguesa e Literatura II - 1226",
+          subject: "Língua Portuguesa e Literatura I - 1069",
           size: 2,
           teacher: "Michelli Cristina Galli",
           classroom: "",
-          students: "IIW2022A",
+          students: "IIW2023A",
           time: "10:15 - 11:05"
         }
       ]
     },
     {
       title: "Quarta-Feira",
-      timetable: []
-    },
-    {
-      title: "Quinta-Feira",
       timetable: [
         {
           subject: "Língua Portuguesa e Literatura I - 1069",
@@ -42,6 +38,19 @@ const data = {
           classroom: "",
           students: "IIW2023A",
           time: "07:30 - 08:20"
+        }
+      ]
+    },
+    {
+      title: "Quinta-Feira",
+      timetable: [
+        {
+          subject: "Língua Portuguesa e Literatura II - 1226",
+          size: 2,
+          teacher: "Michelli Cristina Galli",
+          classroom: "",
+          students: "IIW2022A",
+          time: "15:05 - 15:55"
         },
         {
           subject: "Língua Portuguesa e Literatura III - 1240",
@@ -56,14 +65,6 @@ const data = {
     {
       title: "Sexta-Feira",
       timetable: [
-        {
-          subject: "Lingua Estrangeira Moderna - Espanhol - 1540",
-          size: 1,
-          teacher: "Michelli Cristina Galli",
-          classroom: "",
-          students: "EIN2023",
-          time: "11:05 - 11:55"
-        },
         {
           subject: "Língua Portuguesa e Literatura II - 1226",
           size: 2,
