--- a/docs/professor/novo_professor_de_eletrica_pss.mdx
+++ b/docs/professor/novo_professor_de_eletrica_pss.mdx
@@ -4,50 +4,17 @@ const data = {
   weekClasses: [
     {
       title: "Segunda-Feira",
-      timetable: [
-        {
-          subject: "Eletrônica de Potência - 114",
-          size: 1,
-          teacher: "Novo Professor de Elétrica PSS - 40h",
-          classroom: "",
-          students: "ELM2022",
-          time: "21:50 - 22:40"
-        },
-        {
-          subject: "Eletrônica de Potência - 114",
-          size: 1,
-          teacher: "Novo Professor de Elétrica PSS - 40h",
-          classroom: "",
-          students: "ELM2022",
-          time: "19:50 - 20:40"
-        },
-        {
-          subject: "Eletrônica de Potência - 2228",
-          size: 1,
-          teacher: "Novo Professor de Elétrica PSS - 40h",
-          classroom: "",
-          students: "ELE2022",
-          time: "19:00 - 19:50"
-        }
-      ]
+      timetable: []
     },
     {
       title: "Terça-Feira",
       timetable: [
         {
-          subject: "Eletrônica de Potência - 2228",
-          size: 1,
+          subject: "Eletrônica de Potência - 114",
+          size: 2,
           teacher: "Novo Professor de Elétrica PSS - 40h",
           classroom: "",
-          students: "ELE2022",
-          time: "19:50 - 20:40"
-        },
-        {
-          subject: "Eletrônica de Potência - 2228",
-          size: 1,
-          teacher: "Novo Professor de Elétrica PSS - 40h",
-          classroom: "",
-          students: "ELE2022",
+          students: "ELM2022",
           time: "19:00 - 19:50"
         }
       ]
@@ -56,29 +23,8 @@ const data = {
       title: "Quarta-Feira",
       timetable: [
         {
-          subject: "Eletrônica de Potência - 2228",
-          size: 1,
-          teacher: "Novo Professor de Elétrica PSS - 40h",
-          classroom: "",
-          students: "ELE2022",
-          time: "19:00 - 19:50"
-        }
-      ]
-    },
-    {
-      title: "Quinta-Feira",
-      timetable: [
-        {
           subject: "Projetos elétricos industriais - 2232",
-          size: 1,
-          teacher: "Novo Professor de Elétrica PSS - 40h",
-          classroom: "",
-          students: "ELE2022",
-          time: "19:50 - 20:40"
-        },
-        {
-          subject: "Projetos elétricos industriais - 2232",
-          size: 1,
+          size: 2,
           teacher: "Novo Professor de Elétrica PSS - 40h",
           classroom: "",
           students: "ELE2022",
@@ -87,23 +33,36 @@ const data = {
       ]
     },
     {
+      title: "Quinta-Feira",
+      timetable: [
+        {
+          subject: "Eletrônica de Potência - 2228",
+          size: 2,
+          teacher: "Novo Professor de Elétrica PSS - 40h",
+          classroom: "",
+          students: "ELE2022",
+          time: "21:00 - 21:50"
+        },
+        {
+          subject: "Eletrônica de Potência - 2228",
+          size: 2,
+          teacher: "Novo Professor de Elétrica PSS - 40h",
+          classroom: "",
+          students: "ELE2022",
+          time: "19:00 - 19:50"
+        }
+      ]
+    },
+    {
       title: "Sexta-Feira",
       timetable: [
         {
           subject: "Eletrônica de Potência - 114",
-          size: 1,
+          size: 2,
           teacher: "Novo Professor de Elétrica PSS - 40h",
           classroom: "",
           students: "ELM2022",
-          time: "19:50 - 20:40"
-        },
-        {
-          subject: "Eletrônica de Potência - 114",
-          size: 1,
-          teacher: "Novo Professor de Elétrica PSS - 40h",
-          classroom: "",
-          students: "ELM2022",
-          time: "19:00 - 19:50"
+          time: "21:00 - 21:50"
         }
       ]
     }
