--- a/docs/professor/octavio_henrique_viana.mdx
+++ b/docs/professor/octavio_henrique_viana.mdx
@@ -6,12 +6,12 @@ const data = {
       title: "Segunda-Feira",
       timetable: [
         {
-          subject: "Meteorologia e Bioclimatologia na Agropecuária - 631",
-          size: 1,
+          subject: "Desenho técnico e instalações agropecuárias - 1456",
+          size: 2,
           teacher: "Octavio Henrique Viana",
           classroom: "",
-          students: "AGO2022",
-          time: "08:20 - 09:10"
+          students: "AGR2023",
+          time: "21:00 - 21:50"
         }
       ]
     },
@@ -20,27 +20,11 @@ const data = {
       timetable: [
         {
           subject: "Desenho técnico e topografia - 469",
-          size: 1,
+          size: 2,
           teacher: "Octavio Henrique Viana",
           classroom: "",
-          students: "AGO2023 - Grupo A",
-          time: "11:05 - 11:55"
-        },
-        {
-          subject: "Mecanização Agrícola - 2217",
-          size: 1,
-          teacher: "Octavio Henrique Viana",
-          classroom: "",
-          students: "AGR2022",
-          time: "21:50 - 22:40"
-        },
-        {
-          subject: "Orientação de estágio supervisionado - 1097",
-          size: 1,
-          teacher: "Octavio Henrique Viana",
-          classroom: "",
-          students: "AGO2021",
-          time: "15:05 - 15:55"
+          students: "AGO2023 - GB",
+          time: "10:15 - 11:05"
         }
       ]
     },
@@ -48,28 +32,20 @@ const data = {
       title: "Quarta-Feira",
       timetable: [
         {
-          subject: "Desenho técnico e instalações agropecuárias - 1456",
-          size: 1,
-          teacher: "Octavio Henrique Viana",
-          classroom: "",
-          students: "AGR2023",
-          time: "21:00 - 21:50"
-        },
-        {
-          subject: "Desenho técnico e instalações agropecuárias - 1456",
-          size: 1,
-          teacher: "Octavio Henrique Viana",
-          classroom: "",
-          students: "AGR2023",
-          time: "19:00 - 19:50"
-        },
-        {
           subject: "Desenho técnico e topografia - 469",
-          size: 1,
+          size: 2,
           teacher: "Octavio Henrique Viana",
           classroom: "",
-          students: "AGO2023 - Grupo A",
-          time: "08:20 - 09:10"
+          students: "AGO2023 - GA",
+          time: "15:05 - 15:55"
+        },
+        {
+          subject: "Mecanização Agrícola - 2217",
+          size: 2,
+          teacher: "Octavio Henrique Viana",
+          classroom: "",
+          students: "AGR2022",
+          time: "21:00 - 21:50"
         }
       ]
     },
@@ -77,20 +53,12 @@ const data = {
       title: "Quinta-Feira",
       timetable: [
         {
-          subject: "Desenho técnico e topografia - 469",
-          size: 1,
-          teacher: "Octavio Henrique Viana",
-          classroom: "",
-          students: "AGO2023 - Grupo B",
-          time: "10:15 - 11:05"
-        },
-        {
           subject: "Mecanização Agrícola, Irrigação e Drenagem - 1096",
-          size: 1,
+          size: 2,
           teacher: "Octavio Henrique Viana",
           classroom: "",
           students: "AGO2021",
-          time: "09:25 - 10:15"
+          time: "10:15 - 11:05"
         }
       ]
     },
@@ -98,36 +66,20 @@ const data = {
       title: "Sexta-Feira",
       timetable: [
         {
-          subject: "Desenho técnico e topografia - 469",
-          size: 1,
+          subject: "Meteorologia e Bioclimatologia na Agropecuária - 631",
+          size: 2,
           teacher: "Octavio Henrique Viana",
           classroom: "",
-          students: "AGO2023 - Grupo B",
-          time: "09:25 - 10:15"
+          students: "AGO2022",
+          time: "10:15 - 11:05"
         },
         {
-          subject: "Mecanização Agrícola - 2217",
-          size: 1,
-          teacher: "Octavio Henrique Viana",
-          classroom: "",
-          students: "AGR2022",
-          time: "21:00 - 21:50"
-        },
-        {
-          subject: "Mecanização Agrícola, Irrigação e Drenagem - 1096",
+          subject: "Orientação de estágio supervisionado - 1097",
           size: 1,
           teacher: "Octavio Henrique Viana",
           classroom: "",
           students: "AGO2021",
-          time: "07:30 - 08:20"
-        },
-        {
-          subject: "Meteorologia e Bioclimatologia na Agropecuária - 631",
-          size: 1,
-          teacher: "Octavio Henrique Viana",
-          classroom: "",
-          students: "AGO2022",
-          time: "13:10 - 14:00"
+          time: "09:25 - 10:15"
         }
       ]
     }
