--- a/docs/professor/olavo_jose_luiz_junior.mdx
+++ b/docs/professor/olavo_jose_luiz_junior.mdx
@@ -6,38 +6,9 @@ const data = {
       title: "Segunda-Feira",
       timetable: [
         {
-          subject: "Administração de Sistemas Operacionais e Redes - 1236",
-          size: 2,
-          teacher: "Olavo José Luiz Junior",
-          classroom: "Laboratório de Informatica BioPark",
-          students: "IIW2022B",
-          time: "10:15 - 11:05"
-        },
-        {
-          subject: "Lógica de Programação - 1483",
-          size: 1,
-          teacher: "Olavo José Luiz Junior+Eduardo Alberto Felippsen",
-          classroom: "",
-          students: "TPS2023-1",
-          time: "15:05 - 15:55"
-        }
-      ]
-    },
-    {
-      title: "Terça-Feira",
-      timetable: [
-        {
           subject: "Linguagem de Programação - 1484",
           size: 1,
           teacher: "Eduardo Alberto Felippsen+Olavo José Luiz Junior",
-          classroom: "",
-          students: "TPS2023-1",
-          time: "13:10 - 14:00"
-        },
-        {
-          subject: "Lógica de Programação - 1483",
-          size: 1,
-          teacher: "Olavo José Luiz Junior+Eduardo Alberto Felippsen",
           classroom: "",
           students: "TPS2023-1",
           time: "14:00 - 14:50"
@@ -45,16 +16,8 @@ const data = {
       ]
     },
     {
-      title: "Quarta-Feira",
+      title: "Terça-Feira",
       timetable: [
-        {
-          subject: "Linguagem de Programação - 1484",
-          size: 1,
-          teacher: "Eduardo Alberto Felippsen+Olavo José Luiz Junior",
-          classroom: "",
-          students: "TPS2023-1",
-          time: "15:55 - 16:45"
-        },
         {
           subject: "Projeto Integrador III - 1253",
           size: 2,
@@ -62,24 +25,36 @@ const data = {
           classroom: "",
           students: "IIW2021",
           time: "07:30 - 08:20"
-        },
-        {
-          subject: "Lógica de Programação - 1483",
-          size: 1,
-          teacher: "Olavo José Luiz Junior+Eduardo Alberto Felippsen",
-          classroom: "",
-          students: "TPS2023-1",
-          time: "15:05 - 15:55"
         }
       ]
+    },
+    {
+      title: "Quarta-Feira",
+      timetable: []
     },
     {
       title: "Quinta-Feira",
       timetable: [
         {
-          subject: "Linguagem de Programação - 1484",
+          subject: "Administração de Sistemas Operacionais e Redes - 1236",
+          size: 2,
+          teacher: "Olavo José Luiz Junior",
+          classroom: "",
+          students: "IIW2022B",
+          time: "10:15 - 11:05"
+        },
+        {
+          subject: "Lógica de Programação - 1483",
+          size: 2,
+          teacher: "Olavo José Luiz Junior+Eduardo Alberto Felippsen",
+          classroom: "",
+          students: "TPS2023-1",
+          time: "15:05 - 15:55"
+        },
+        {
+          subject: "Lógica de Programação - 1483",
           size: 1,
-          teacher: "Eduardo Alberto Felippsen+Olavo José Luiz Junior",
+          teacher: "Olavo José Luiz Junior+Eduardo Alberto Felippsen",
           classroom: "",
           students: "TPS2023-1",
           time: "14:00 - 14:50"
@@ -90,10 +65,18 @@ const data = {
       title: "Sexta-Feira",
       timetable: [
         {
+          subject: "Linguagem de Programação - 1484",
+          size: 2,
+          teacher: "Eduardo Alberto Felippsen+Olavo José Luiz Junior",
+          classroom: "",
+          students: "TPS2023-1",
+          time: "15:05 - 15:55"
+        },
+        {
           subject: "Administração de Sistemas Operacionais e Redes - 1236",
           size: 2,
           teacher: "Olavo José Luiz Junior",
-          classroom: "Laboratório de Informatica BioPark",
+          classroom: "",
           students: "IIW2022B",
           time: "10:15 - 11:05"
         }
