--- a/docs/professor/rafael_gil_ferques.mdx
+++ b/docs/professor/rafael_gil_ferques.mdx
@@ -4,31 +4,44 @@ const data = {
   weekClasses: [
     {
       title: "Segunda-Feira",
-      timetable: []
+      timetable: [
+        {
+          subject: "Desenvolvimento WEB - 721",
+          size: 2,
+          teacher: "Rafael Gil Ferques",
+          classroom: "",
+          students: "TDS2023-3S",
+          time: "19:00 - 19:50"
+        },
+        {
+          subject: "Desenvolvimento WEB - 721",
+          size: 2,
+          teacher: "Rafael Gil Ferques",
+          classroom: "",
+          students: "TDS2023-3S",
+          time: "21:00 - 21:50"
+        }
+      ]
     },
     {
       title: "Terça-Feira",
       timetable: [
         {
           subject: "Desenvolvimento WEB - 721",
-          size: 1,
+          size: 2,
           teacher: "Rafael Gil Ferques",
           classroom: "",
           students: "TDS2023-3S",
           time: "21:00 - 21:50"
-        },
-        {
-          subject: "Desenvolvimento WEB - 721",
-          size: 1,
-          teacher: "Rafael Gil Ferques",
-          classroom: "",
-          students: "TDS2023-3S",
-          time: "19:00 - 19:50"
         }
       ]
     },
     {
       title: "Quarta-Feira",
+      timetable: []
+    },
+    {
+      title: "Quinta-Feira",
       timetable: [
         {
           subject: "Linguagens de apresentação e estruturação de conteúdos - 1074",
@@ -36,28 +49,7 @@ const data = {
           teacher: "Rafael Gil Ferques",
           classroom: "",
           students: "IIW2023A",
-          time: "10:15 - 11:05"
-        }
-      ]
-    },
-    {
-      title: "Quinta-Feira",
-      timetable: [
-        {
-          subject: "Desenvolvimento WEB - 721",
-          size: 1,
-          teacher: "Rafael Gil Ferques",
-          classroom: "",
-          students: "TDS2023-3S",
-          time: "21:50 - 22:40"
-        },
-        {
-          subject: "Desenvolvimento WEB - 721",
-          size: 1,
-          teacher: "Rafael Gil Ferques",
-          classroom: "",
-          students: "TDS2023-3S",
-          time: "19:00 - 19:50"
+          time: "07:30 - 08:20"
         }
       ]
     },
@@ -65,27 +57,19 @@ const data = {
       title: "Sexta-Feira",
       timetable: [
         {
-          subject: "Desenvolvimento WEB - 721",
-          size: 1,
-          teacher: "Rafael Gil Ferques",
-          classroom: "",
-          students: "TDS2023-3S",
-          time: "19:00 - 19:50"
-        },
-        {
-          subject: "Desenvolvimento WEB - 721",
-          size: 1,
-          teacher: "Rafael Gil Ferques",
-          classroom: "",
-          students: "TDS2023-3S",
-          time: "21:50 - 22:40"
-        },
-        {
           subject: "Linguagens de apresentação e estruturação de conteúdos - 1074",
           size: 2,
           teacher: "Rafael Gil Ferques",
           classroom: "",
           students: "IIW2023A",
+          time: "15:05 - 15:55"
+        },
+        {
+          subject: "Sistemas Gerenciadores de Conteúdo WEB - 1252",
+          size: 2,
+          teacher: "Rafael Gil Ferques",
+          classroom: "",
+          students: "IIW2021",
           time: "07:30 - 08:20"
         }
       ]
