--- a/docs/professor/renata_carolina_pereira.mdx
+++ b/docs/professor/renata_carolina_pereira.mdx
@@ -6,12 +6,20 @@ const data = {
       title: "Segunda-Feira",
       timetable: [
         {
-          subject: "Artes I - 458",
+          subject: "Artes 1 - 121",
           size: 1,
           teacher: "Renata Carolina Pereira",
           classroom: "",
-          students: "AGO2023",
-          time: "07:30 - 08:20"
+          students: "EIN2023",
+          time: "08:20 - 09:10"
+        },
+        {
+          subject: "Artes II - 614",
+          size: 2,
+          teacher: "Renata Carolina Pereira",
+          classroom: "",
+          students: "AGO2022",
+          time: "09:25 - 10:15"
         }
       ]
     },
@@ -19,28 +27,20 @@ const data = {
       title: "Terça-Feira",
       timetable: [
         {
-          subject: "Artes 1 - 121",
+          subject: "Arte I - 1235",
           size: 1,
           teacher: "Renata Carolina Pereira",
           classroom: "",
-          students: "EIN2023",
-          time: "10:15 - 11:05"
-        },
-        {
-          subject: "Artes 2 - 166",
-          size: 1,
-          teacher: "Renata Carolina Pereira",
-          classroom: "",
-          students: "EIN2022",
-          time: "08:20 - 09:10"
-        },
-        {
-          subject: "Artes II - 614",
-          size: 1,
-          teacher: "Renata Carolina Pereira",
-          classroom: "",
-          students: "AGO2022",
+          students: "IIW2022A",
           time: "11:05 - 11:55"
+        },
+        {
+          subject: "Artes 3 - 221",
+          size: 1,
+          teacher: "Renata Carolina Pereira",
+          classroom: "",
+          students: "EIN2020",
+          time: "09:25 - 10:15"
         }
       ]
     },
@@ -53,45 +53,28 @@ const data = {
           teacher: "Renata Carolina Pereira",
           classroom: "",
           students: "IIW2022A",
-          time: "09:25 - 10:15"
-        },
-        {
-          subject: "Artes 3 - 221",
-          size: 1,
-          teacher: "Renata Carolina Pereira",
-          classroom: "",
-          students: "EIN2020",
-          time: "08:20 - 09:10"
-        }
-      ]
-    },
-    {
-      title: "Quinta-Feira",
-      timetable: [
-        {
-          subject: "Arte I - 1235",
-          size: 1,
-          teacher: "Renata Carolina Pereira",
-          classroom: "",
-          students: "IIW2022A",
-          time: "09:25 - 10:15"
-        },
-        {
-          subject: "Artes II - 614",
-          size: 1,
-          teacher: "Renata Carolina Pereira",
-          classroom: "",
-          students: "AGO2022",
           time: "11:05 - 11:55"
         }
       ]
     },
     {
+      title: "Quinta-Feira",
+      timetable: []
+    },
+    {
       title: "Sexta-Feira",
       timetable: [
         {
-          subject: "Artes I - 458",
+          subject: "Artes 2 - 166",
           size: 1,
+          teacher: "Renata Carolina Pereira",
+          classroom: "",
+          students: "EIN2022",
+          time: "09:25 - 10:15"
+        },
+        {
+          subject: "Artes I - 458",
+          size: 2,
           teacher: "Renata Carolina Pereira",
           classroom: "",
           students: "AGO2023",
