--- a/docs/professor/renato_lada_guerreiro.mdx
+++ b/docs/professor/renato_lada_guerreiro.mdx
@@ -6,14 +6,6 @@ const data = {
       title: "Segunda-Feira",
       timetable: [
         {
-          subject: "Geografia I - 1233",
-          size: 2,
-          teacher: "Renato Lada Guerreiro",
-          classroom: "",
-          students: "IIW2022A",
-          time: "09:25 - 10:15"
-        },
-        {
           subject: "Geologia e paleontologia - 491",
           size: 1,
           teacher: "Renato Lada Guerreiro",
@@ -27,7 +19,7 @@ const data = {
           teacher: "Renato Lada Guerreiro",
           classroom: "",
           students: "BIO2020",
-          time: "19:00 - 19:50"
+          time: "19:50 - 20:40"
         }
       ]
     },
@@ -52,17 +44,13 @@ const data = {
           size: 2,
           teacher: "Renato Lada Guerreiro",
           classroom: "",
-          students: "IIW2022B",
-          time: "10:15 - 11:05"
+          students: "IIW2022A",
+          time: "09:25 - 10:15"
         }
       ]
     },
     {
       title: "Quinta-Feira",
-      timetable: []
-    },
-    {
-      title: "Sexta-Feira",
       timetable: [
         {
           subject: "Geografia II - 1247",
@@ -71,6 +59,19 @@ const data = {
           classroom: "",
           students: "IIW2021",
           time: "07:30 - 08:20"
+        }
+      ]
+    },
+    {
+      title: "Sexta-Feira",
+      timetable: [
+        {
+          subject: "Geografia I - 1233",
+          size: 2,
+          teacher: "Renato Lada Guerreiro",
+          classroom: "",
+          students: "IIW2022B",
+          time: "07:30 - 08:20"
         },
         {
           subject: "Geologia e paleontologia - 491",
@@ -78,7 +79,7 @@ const data = {
           teacher: "Renato Lada Guerreiro",
           classroom: "",
           students: "BIO2020",
-          time: "19:00 - 19:50"
+          time: "21:50 - 22:40"
         }
       ]
     }
