--- a/docs/professor/tiago_henrique_dos_santos.mdx
+++ b/docs/professor/tiago_henrique_dos_santos.mdx
@@ -7,19 +7,19 @@ const data = {
       timetable: [
         {
           subject: "Eletricidade e Medidas Elétricas - 1530",
-          size: 1,
+          size: 2,
           teacher: "Tiago Henrique dos Santos",
           classroom: "",
-          students: "EIN2023 - Grupo A",
-          time: "08:20 - 09:10"
+          students: "EIN2023 - GB",
+          time: "09:25 - 10:15"
         },
         {
-          subject: "Eletricidade e Medidas Elétricas - 1530",
-          size: 1,
+          subject: "Eletrônica - 1554",
+          size: 2,
           teacher: "Tiago Henrique dos Santos",
           classroom: "",
-          students: "EIN2023 - Grupo B",
-          time: "11:05 - 11:55"
+          students: "EIN2022",
+          time: "07:30 - 08:20"
         }
       ]
     },
@@ -27,20 +27,12 @@ const data = {
       title: "Terça-Feira",
       timetable: [
         {
-          subject: "Eletricidade e Medidas Elétricas - 1530",
-          size: 1,
-          teacher: "Tiago Henrique dos Santos",
-          classroom: "",
-          students: "EIN2023 - Grupo B",
-          time: "08:20 - 09:10"
-        },
-        {
           subject: "Eletrônica - 1554",
           size: 1,
           teacher: "Tiago Henrique dos Santos",
           classroom: "",
           students: "EIN2022",
-          time: "11:05 - 11:55"
+          time: "08:20 - 09:10"
         }
       ]
     },
@@ -49,19 +41,27 @@ const data = {
       timetable: [
         {
           subject: "Eletricidade Básica - 595",
-          size: 1,
+          size: 2,
           teacher: "Tiago Henrique dos Santos",
           classroom: "",
           students: "ELE2023",
           time: "19:00 - 19:50"
         },
         {
-          subject: "Eletrônica - 1554",
-          size: 1,
+          subject: "Eletricidade Básica - 595",
+          size: 2,
           teacher: "Tiago Henrique dos Santos",
           classroom: "",
-          students: "EIN2022",
-          time: "09:25 - 10:15"
+          students: "ELE2023",
+          time: "21:00 - 21:50"
+        },
+        {
+          subject: "Eletricidade e Medidas Elétricas - 1530",
+          size: 2,
+          teacher: "Tiago Henrique dos Santos",
+          classroom: "",
+          students: "EIN2023 - GA",
+          time: "07:30 - 08:20"
         }
       ]
     },
@@ -69,20 +69,12 @@ const data = {
       title: "Quinta-Feira",
       timetable: [
         {
-          subject: "Eletricidade Básica - 595",
-          size: 1,
-          teacher: "Tiago Henrique dos Santos",
-          classroom: "",
-          students: "ELE2023",
-          time: "19:00 - 19:50"
-        },
-        {
           subject: "Eletricidade e Medidas Elétricas - 1530",
           size: 1,
           teacher: "Tiago Henrique dos Santos",
           classroom: "",
-          students: "EIN2023 - Grupo A",
-          time: "11:05 - 11:55"
+          students: "EIN2023 - GB",
+          time: "10:15 - 11:05"
         }
       ]
     },
@@ -90,44 +82,12 @@ const data = {
       title: "Sexta-Feira",
       timetable: [
         {
-          subject: "Eletricidade Básica - 595",
-          size: 1,
-          teacher: "Tiago Henrique dos Santos",
-          classroom: "",
-          students: "ELE2023",
-          time: "19:50 - 20:40"
-        },
-        {
-          subject: "Eletricidade Básica - 595",
-          size: 1,
-          teacher: "Tiago Henrique dos Santos",
-          classroom: "",
-          students: "ELE2023",
-          time: "19:00 - 19:50"
-        },
-        {
           subject: "Eletricidade e Medidas Elétricas - 1530",
           size: 1,
           teacher: "Tiago Henrique dos Santos",
           classroom: "",
-          students: "EIN2023 - Grupo B",
-          time: "09:25 - 10:15"
-        },
-        {
-          subject: "Eletricidade e Medidas Elétricas - 1530",
-          size: 1,
-          teacher: "Tiago Henrique dos Santos",
-          classroom: "",
-          students: "EIN2023 - Grupo A",
-          time: "07:30 - 08:20"
-        },
-        {
-          subject: "Eletrônica - 1554",
-          size: 1,
-          teacher: "Tiago Henrique dos Santos",
-          classroom: "",
-          students: "EIN2022",
-          time: "10:15 - 11:05"
+          students: "EIN2023 - GA",
+          time: "08:20 - 09:10"
         }
       ]
     }
