--- a/docs/professor/vander_fabio_silveira.mdx
+++ b/docs/professor/vander_fabio_silveira.mdx
@@ -6,11 +6,11 @@ const data = {
       title: "Segunda-Feira",
       timetable: [
         {
-          subject: "Eletricidade Básica - 134",
-          size: 1,
+          subject: "Elementos de Automação - 112",
+          size: 2,
           teacher: "Vander Fabio Silveira",
           classroom: "",
-          students: "ELM2023",
+          students: "ELM2022",
           time: "19:00 - 19:50"
         }
       ]
@@ -20,35 +20,19 @@ const data = {
       timetable: [
         {
           subject: "Elementos de Automação - 198",
-          size: 1,
+          size: 2,
           teacher: "Vander Fabio Silveira",
           classroom: "",
           students: "EIN2021",
-          time: "11:05 - 11:55"
+          time: "09:25 - 10:15"
         },
         {
           subject: "Eletricidade Básica - 134",
-          size: 1,
+          size: 2,
           teacher: "Vander Fabio Silveira",
           classroom: "",
           students: "ELM2023",
-          time: "21:50 - 22:40"
-        },
-        {
-          subject: "Eletricidade Básica - 134",
-          size: 1,
-          teacher: "Vander Fabio Silveira",
-          classroom: "",
-          students: "ELM2023",
-          time: "19:00 - 19:50"
-        },
-        {
-          subject: "Sistemas Digitais - 1553",
-          size: 1,
-          teacher: "Vander Fabio Silveira",
-          classroom: "",
-          students: "EIN2022",
-          time: "10:15 - 11:05"
+          time: "21:00 - 21:50"
         }
       ]
     },
@@ -56,66 +40,25 @@ const data = {
       title: "Quarta-Feira",
       timetable: [
         {
-          subject: "Elementos de Automação - 112",
-          size: 1,
+          subject: "Eletricidade Básica - 134",
+          size: 2,
           teacher: "Vander Fabio Silveira",
           classroom: "",
-          students: "ELM2022",
-          time: "19:00 - 19:50"
-        },
-        {
-          subject: "Instalações Elétricas - 691",
-          size: 1,
-          teacher: "Vander Fabio Silveira",
-          classroom: "",
-          students: "ELE2022",
-          time: "19:50 - 20:40"
-        },
-        {
-          subject: "Instalações Elétricas - 691",
-          size: 1,
-          teacher: "Vander Fabio Silveira",
-          classroom: "",
-          students: "ELE2022",
-          time: "21:50 - 22:40"
+          students: "ELM2023",
+          time: "21:00 - 21:50"
         }
       ]
     },
     {
       title: "Quinta-Feira",
-      timetable: [
-        {
-          subject: "Elementos de Automação - 112",
-          size: 1,
-          teacher: "Vander Fabio Silveira",
-          classroom: "",
-          students: "ELM2022",
-          time: "19:00 - 19:50"
-        },
-        {
-          subject: "Eletricidade Básica - 134",
-          size: 1,
-          teacher: "Vander Fabio Silveira",
-          classroom: "",
-          students: "ELM2023",
-          time: "21:50 - 22:40"
-        }
-      ]
+      timetable: []
     },
     {
       title: "Sexta-Feira",
       timetable: [
         {
-          subject: "Elementos de Automação - 198",
-          size: 1,
-          teacher: "Vander Fabio Silveira",
-          classroom: "",
-          students: "EIN2021",
-          time: "08:20 - 09:10"
-        },
-        {
           subject: "Instalações Elétricas - 691",
-          size: 1,
+          size: 2,
           teacher: "Vander Fabio Silveira",
           classroom: "",
           students: "ELE2022",
@@ -123,15 +66,15 @@ const data = {
         },
         {
           subject: "Instalações Elétricas - 691",
-          size: 1,
+          size: 2,
           teacher: "Vander Fabio Silveira",
           classroom: "",
           students: "ELE2022",
-          time: "21:50 - 22:40"
+          time: "19:00 - 19:50"
         },
         {
           subject: "Sistemas Digitais - 1553",
-          size: 1,
+          size: 2,
           teacher: "Vander Fabio Silveira",
           classroom: "",
           students: "EIN2022",
