--- a/docs/turma/ein2023.mdx
+++ b/docs/turma/ein2023.mdx
@@ -6,60 +6,44 @@ const data = {
       title: "Segunda-Feira",
       timetable: [
         {
-          subject: "Lingua Portuguesa 1 - 138",
+          subject: "Educação Física 1 - 123",
           size: 1,
-          teacher: "Kátia Cristiane Kobus Novaes",
+          teacher: "Bruna Valeriano da Silva Lisboa",
           classroom: "",
           students: "EIN2023",
-          time: "10:15 - 11:05"
+          time: "11:05 - 11:55"
         },
         {
-          subject: "Lingua Portuguesa 1 - 138",
+          subject: "Lingua Estrangeira Moderna - Espanhol - 1540",
           size: 1,
-          teacher: "Kátia Cristiane Kobus Novaes",
-          classroom: "",
-          students: "EIN2023",
-          time: "09:25 - 10:15"
-        },
-        {
-          subject: "História 1 - 131",
-          size: 1,
-          teacher: "Suzane Conceição Pantolfi Tostes",
+          teacher: "Michelli Cristina Galli",
           classroom: "",
           students: "EIN2023",
           time: "07:30 - 08:20"
         },
         {
-          subject: "Desenho Técnico - 1529",
+          subject: "Artes 1 - 121",
           size: 1,
-          teacher: "Sérgio Takahashi",
+          teacher: "Renata Carolina Pereira",
           classroom: "",
-          students: "EIN2023 - Grupo A",
-          time: "11:05 - 11:55"
-        },
-        {
-          subject: "Desenho Técnico - 1529",
-          size: 1,
-          teacher: "Sérgio Takahashi",
-          classroom: "",
-          students: "EIN2023 - Grupo B",
+          students: "EIN2023",
           time: "08:20 - 09:10"
         },
         {
-          subject: "Eletricidade e Medidas Elétricas - 1530",
-          size: 1,
-          teacher: "Tiago Henrique dos Santos",
+          subject: "Desenho Técnico - 1529",
+          size: 2,
+          teacher: "Sérgio Takahashi",
           classroom: "",
-          students: "EIN2023 - Grupo A",
-          time: "08:20 - 09:10"
+          students: "EIN2023 - GA",
+          time: "09:25 - 10:15"
         },
         {
           subject: "Eletricidade e Medidas Elétricas - 1530",
-          size: 1,
+          size: 2,
           teacher: "Tiago Henrique dos Santos",
           classroom: "",
-          students: "EIN2023 - Grupo B",
-          time: "11:05 - 11:55"
+          students: "EIN2023 - GB",
+          time: "09:25 - 10:15"
         }
       ]
     },
@@ -68,51 +52,27 @@ const data = {
       timetable: [
         {
           subject: "Tecnologia dos Materiais - 1531",
-          size: 1,
+          size: 2,
           teacher: "Darlan Roque Dapieve",
-          classroom: "",
-          students: "EIN2023",
-          time: "11:05 - 11:55"
-        },
-        {
-          subject: "Geografia 1 - 126",
-          size: 1,
-          teacher: "Jhones Donizetti Mendes",
-          classroom: "",
-          students: "EIN2023",
-          time: "07:30 - 08:20"
-        },
-        {
-          subject: "Informática Instrumental - 1532",
-          size: 1,
-          teacher: "Joaquim José Honório de Lima",
-          classroom: "",
-          students: "EIN2023",
-          time: "09:25 - 10:15"
-        },
-        {
-          subject: "Artes 1 - 121",
-          size: 1,
-          teacher: "Renata Carolina Pereira",
           classroom: "",
           students: "EIN2023",
           time: "10:15 - 11:05"
         },
         {
-          subject: "Desenho Técnico - 1529",
+          subject: "Química 1 - 143",
           size: 1,
-          teacher: "Sérgio Takahashi",
+          teacher: "Elizangela Cavazzini Cesca",
           classroom: "",
-          students: "EIN2023 - Grupo A",
-          time: "08:20 - 09:10"
+          students: "EIN2023",
+          time: "09:25 - 10:15"
         },
         {
-          subject: "Eletricidade e Medidas Elétricas - 1530",
-          size: 1,
-          teacher: "Tiago Henrique dos Santos",
+          subject: "Informática Instrumental - 1532",
+          size: 2,
+          teacher: "Joaquim José Honório de Lima",
           classroom: "",
-          students: "EIN2023 - Grupo B",
-          time: "08:20 - 09:10"
+          students: "EIN2023",
+          time: "07:30 - 08:20"
         }
       ]
     },
@@ -121,7 +81,7 @@ const data = {
       timetable: [
         {
           subject: "Física 1 - 125",
-          size: 1,
+          size: 2,
           teacher: "Bruno Garcia Bonfim",
           classroom: "",
           students: "EIN2023",
@@ -133,22 +93,22 @@ const data = {
           teacher: "Fabio Antônio da Silva",
           classroom: "",
           students: "EIN2023",
-          time: "11:05 - 11:55"
-        },
-        {
-          subject: "Informática Instrumental - 1532",
-          size: 1,
-          teacher: "Joaquim José Honório de Lima",
-          classroom: "",
-          students: "EIN2023",
           time: "09:25 - 10:15"
         },
         {
-          subject: "Matemática 1 - 142",
+          subject: "Desenho Técnico - 1529",
           size: 2,
-          teacher: "Sérgio Augusto Dias Castro",
+          teacher: "Sérgio Takahashi",
           classroom: "",
-          students: "EIN2023",
+          students: "EIN2023 - GB",
+          time: "07:30 - 08:20"
+        },
+        {
+          subject: "Eletricidade e Medidas Elétricas - 1530",
+          size: 2,
+          teacher: "Tiago Henrique dos Santos",
+          classroom: "",
+          students: "EIN2023 - GA",
           time: "07:30 - 08:20"
         }
       ]
@@ -157,29 +117,50 @@ const data = {
       title: "Quinta-Feira",
       timetable: [
         {
-          subject: "Educação Física 1 - 123",
-          size: 1,
-          teacher: "Bruna Valeriano da Silva Lisboa",
-          classroom: "",
-          students: "EIN2023",
-          time: "10:15 - 11:05"
-        },
-        {
           subject: "Biologia 1 - 122",
           size: 1,
           teacher: "Eliana Peliçon Pereira Figueira",
           classroom: "",
           students: "EIN2023",
+          time: "11:05 - 11:55"
+        },
+        {
+          subject: "Lingua Portuguesa 1 - 138",
+          size: 2,
+          teacher: "Kátia Cristiane Kobus Novaes",
+          classroom: "",
+          students: "EIN2023",
           time: "07:30 - 08:20"
         },
         {
-          subject: "Química 1 - 143",
+          subject: "História 1 - 131",
           size: 1,
-          teacher: "Elizangela Cavazzini Cesca",
+          teacher: "Suzane Conceição Pantolfi Tostes",
           classroom: "",
           students: "EIN2023",
-          time: "08:20 - 09:10"
+          time: "09:25 - 10:15"
         },
+        {
+          subject: "Desenho Técnico - 1529",
+          size: 1,
+          teacher: "Sérgio Takahashi",
+          classroom: "",
+          students: "EIN2023 - GA",
+          time: "10:15 - 11:05"
+        },
+        {
+          subject: "Eletricidade e Medidas Elétricas - 1530",
+          size: 1,
+          teacher: "Tiago Henrique dos Santos",
+          classroom: "",
+          students: "EIN2023 - GB",
+          time: "10:15 - 11:05"
+        }
+      ]
+    },
+    {
+      title: "Sexta-Feira",
+      timetable: [
         {
           subject: "Sociologia 1 - 146",
           size: 1,
@@ -189,81 +170,36 @@ const data = {
           time: "09:25 - 10:15"
         },
         {
-          subject: "Desenho Técnico - 1529",
+          subject: "Geografia 1 - 126",
           size: 1,
-          teacher: "Sérgio Takahashi",
-          classroom: "",
-          students: "EIN2023 - Grupo B",
-          time: "11:05 - 11:55"
-        },
-        {
-          subject: "Eletricidade e Medidas Elétricas - 1530",
-          size: 1,
-          teacher: "Tiago Henrique dos Santos",
-          classroom: "",
-          students: "EIN2023 - Grupo A",
-          time: "11:05 - 11:55"
-        }
-      ]
-    },
-    {
-      title: "Sexta-Feira",
-      timetable: [
-        {
-          subject: "Física 1 - 125",
-          size: 1,
-          teacher: "Bruno Garcia Bonfim",
+          teacher: "Jhones Donizetti Mendes",
           classroom: "",
           students: "EIN2023",
-          time: "08:20 - 09:10"
+          time: "07:30 - 08:20"
         },
         {
-          subject: "Tecnologia dos Materiais - 1531",
-          size: 1,
-          teacher: "Darlan Roque Dapieve",
+          subject: "Matemática 1 - 142",
+          size: 2,
+          teacher: "Sérgio Augusto Dias Castro",
           classroom: "",
           students: "EIN2023",
           time: "10:15 - 11:05"
         },
         {
-          subject: "Lingua Estrangeira Moderna - Espanhol - 1540",
-          size: 1,
-          teacher: "Michelli Cristina Galli",
-          classroom: "",
-          students: "EIN2023",
-          time: "11:05 - 11:55"
-        },
-        {
           subject: "Desenho Técnico - 1529",
           size: 1,
           teacher: "Sérgio Takahashi",
           classroom: "",
-          students: "EIN2023 - Grupo A",
-          time: "09:25 - 10:15"
-        },
-        {
-          subject: "Desenho Técnico - 1529",
-          size: 1,
-          teacher: "Sérgio Takahashi",
-          classroom: "",
-          students: "EIN2023 - Grupo B",
-          time: "07:30 - 08:20"
+          students: "EIN2023 - GB",
+          time: "08:20 - 09:10"
         },
         {
           subject: "Eletricidade e Medidas Elétricas - 1530",
           size: 1,
           teacher: "Tiago Henrique dos Santos",
           classroom: "",
-          students: "EIN2023 - Grupo B",
-          time: "09:25 - 10:15"
-        },
-        {
-          subject: "Eletricidade e Medidas Elétricas - 1530",
-          size: 1,
-          teacher: "Tiago Henrique dos Santos",
-          classroom: "",
-          students: "EIN2023 - Grupo A",
-          time: "07:30 - 08:20"
+          students: "EIN2023 - GA",
+          time: "08:20 - 09:10"
         }
       ]
     }
