--- a/docs/turma/iiw2023a.mdx
+++ b/docs/turma/iiw2023a.mdx
@@ -6,43 +6,6 @@ const data = {
       title: "Segunda-Feira",
       timetable: [
         {
-          subject: "Lingua estrangeira - Inglês - 1225",
-          size: 1,
-          teacher: "Celina de Oliveira Barbosa Gomes",
-          classroom: "",
-          students: "IIW2023A",
-          time: "07:30 - 08:20"
-        },
-        {
-          subject: "Lingua estrangeira - Inglês - 1225",
-          size: 1,
-          teacher: "Celina de Oliveira Barbosa Gomes",
-          classroom: "",
-          students: "IIW2023A",
-          time: "08:20 - 09:10"
-        },
-        {
-          subject: "Sociologia I - 1071",
-          size: 1,
-          teacher: "Everaldo Lorensetti",
-          classroom: "",
-          students: "IIW2023A",
-          time: "11:05 - 11:55"
-        },
-        {
-          subject: "Língua Portuguesa e Literatura I - 1069",
-          size: 2,
-          teacher: "Michelli Cristina Galli",
-          classroom: "",
-          students: "IIW2023A",
-          time: "09:25 - 10:15"
-        }
-      ]
-    },
-    {
-      title: "Terça-Feira",
-      timetable: [
-        {
           subject: "Fundamentos de informática - 1076",
           size: 2,
           teacher: "Caroline Domingues Porto do Nascimento Barbieri",
@@ -56,7 +19,7 @@ const data = {
           teacher: "Elenice Josefa Kolancko Setti",
           classroom: "",
           students: "IIW2023A",
-          time: "13:10 - 14:00"
+          time: "10:15 - 11:05"
         },
         {
           subject: "Sociologia I - 1071",
@@ -64,7 +27,52 @@ const data = {
           teacher: "Everaldo Lorensetti",
           classroom: "",
           students: "IIW2023A",
-          time: "11:05 - 11:55"
+          time: "09:25 - 10:15"
+        }
+      ]
+    },
+    {
+      title: "Terça-Feira",
+      timetable: [
+        {
+          subject: "Lingua estrangeira - Inglês - 1225",
+          size: 1,
+          teacher: "Celina de Oliveira Barbosa Gomes",
+          classroom: "",
+          students: "IIW2023A",
+          time: "09:25 - 10:15"
+        },
+        {
+          subject: "Matemática I - 1064",
+          size: 2,
+          teacher: "Elenice Josefa Kolancko Setti",
+          classroom: "",
+          students: "IIW2023A",
+          time: "15:05 - 15:55"
+        },
+        {
+          subject: "Sociologia I - 1071",
+          size: 1,
+          teacher: "Everaldo Lorensetti",
+          classroom: "",
+          students: "IIW2023A",
+          time: "13:10 - 14:00"
+        },
+        {
+          subject: "Filosofia I - 1139",
+          size: 1,
+          teacher: "Fabio Antônio da Silva",
+          classroom: "",
+          students: "IIW2023A",
+          time: "14:00 - 14:50"
+        },
+        {
+          subject: "Língua Portuguesa e Literatura I - 1069",
+          size: 2,
+          teacher: "Michelli Cristina Galli",
+          classroom: "",
+          students: "IIW2023A",
+          time: "10:15 - 11:05"
         },
         {
           subject: "Biologia I - 1073",
@@ -72,15 +80,7 @@ const data = {
           teacher: "Paula Magalhães Souza Deccache",
           classroom: "",
           students: "IIW2023A",
-          time: "09:25 - 10:15"
-        },
-        {
-          subject: "Física I - 1070",
-          size: 2,
-          teacher: "Polyanna Guimarães e Miranda",
-          classroom: "",
-          students: "IIW2023A",
-          time: "15:05 - 15:55"
+          time: "07:30 - 08:20"
         }
       ]
     },
@@ -88,57 +88,12 @@ const data = {
       title: "Quarta-Feira",
       timetable: [
         {
-          subject: "Filosofia I - 1139",
-          size: 1,
-          teacher: "Fabio Antônio da Silva",
-          classroom: "",
-          students: "IIW2023A",
-          time: "09:25 - 10:15"
-        },
-        {
-          subject: "Química I - 1068",
-          size: 2,
-          teacher: "Kathia Regina Kunzler Bechlin",
-          classroom: "",
-          students: "IIW2023A",
-          time: "07:30 - 08:20"
-        },
-        {
-          subject: "Linguagens de apresentação e estruturação de conteúdos - 1074",
-          size: 2,
-          teacher: "Rafael Gil Ferques",
-          classroom: "",
-          students: "IIW2023A",
-          time: "10:15 - 11:05"
-        }
-      ]
-    },
-    {
-      title: "Quinta-Feira",
-      timetable: [
-        {
-          subject: "Lógica de programação - 1075",
-          size: 2,
-          teacher: "Alexandre Rodrigues Monge",
-          classroom: "",
-          students: "IIW2023A",
-          time: "10:15 - 11:05"
-        },
-        {
           subject: "Projeto integrador I - 1078",
           size: 2,
           teacher: "Alexandre Rodrigues Monge",
           classroom: "",
           students: "IIW2023A",
-          time: "13:10 - 14:00"
-        },
-        {
-          subject: "Educação Física I - 1072",
-          size: 2,
-          teacher: "Bruna Valeriano da Silva Lisboa",
-          classroom: "",
-          students: "IIW2023A",
-          time: "15:05 - 15:55"
+          time: "09:25 - 10:15"
         },
         {
           subject: "Filosofia I - 1139",
@@ -146,7 +101,7 @@ const data = {
           teacher: "Fabio Antônio da Silva",
           classroom: "",
           students: "IIW2023A",
-          time: "09:25 - 10:15"
+          time: "11:05 - 11:55"
         },
         {
           subject: "Língua Portuguesa e Literatura I - 1069",
@@ -159,20 +114,20 @@ const data = {
       ]
     },
     {
-      title: "Sexta-Feira",
+      title: "Quinta-Feira",
       timetable: [
         {
-          subject: "Matemática I - 1064",
+          subject: "Lógica de programação - 1075",
           size: 2,
-          teacher: "Elenice Josefa Kolancko Setti",
+          teacher: "Caroline Domingues Porto do Nascimento Barbieri",
           classroom: "",
           students: "IIW2023A",
           time: "10:15 - 11:05"
         },
         {
-          subject: "História I - 1224",
+          subject: "Lingua estrangeira - Inglês - 1225",
           size: 1,
-          teacher: "Milton Aparecido Azevedo",
+          teacher: "Celina de Oliveira Barbosa Gomes",
           classroom: "",
           students: "IIW2023A",
           time: "09:25 - 10:15"
@@ -184,6 +139,51 @@ const data = {
           classroom: "",
           students: "IIW2023A",
           time: "07:30 - 08:20"
+        }
+      ]
+    },
+    {
+      title: "Sexta-Feira",
+      timetable: [
+        {
+          subject: "Educação Física I - 1072",
+          size: 2,
+          teacher: "Bruna Valeriano da Silva Lisboa",
+          classroom: "",
+          students: "IIW2023A",
+          time: "13:10 - 14:00"
+        },
+        {
+          subject: "Química I - 1068",
+          size: 2,
+          teacher: "Kathia Regina Kunzler Bechlin",
+          classroom: "",
+          students: "IIW2023A",
+          time: "09:25 - 10:15"
+        },
+        {
+          subject: "História I - 1224",
+          size: 1,
+          teacher: "Milton Aparecido Azevedo",
+          classroom: "",
+          students: "IIW2023A",
+          time: "11:05 - 11:55"
+        },
+        {
+          subject: "Física I - 1070",
+          size: 2,
+          teacher: "Polyanna Guimarães e Miranda",
+          classroom: "",
+          students: "IIW2023A",
+          time: "07:30 - 08:20"
+        },
+        {
+          subject: "Linguagens de apresentação e estruturação de conteúdos - 1074",
+          size: 2,
+          teacher: "Rafael Gil Ferques",
+          classroom: "",
+          students: "IIW2023A",
+          time: "15:05 - 15:55"
         }
       ]
     }
