--- a/docs/turma/tds2023-3s.mdx
+++ b/docs/turma/tds2023-3s.mdx
@@ -6,36 +6,20 @@ const data = {
       title: "Segunda-Feira",
       timetable: [
         {
-          subject: "Testes, Verificação e Validação de Sistemas - 723",
-          size: 1,
-          teacher: "Caroline Domingues Porto do Nascimento Barbieri",
+          subject: "Desenvolvimento WEB - 721",
+          size: 2,
+          teacher: "Rafael Gil Ferques",
           classroom: "",
           students: "TDS2023-3S",
           time: "19:00 - 19:50"
         },
         {
-          subject: "Inteligência Artificial e Sistemas Neurais - 724",
-          size: 1,
-          teacher: "Humberto Fioravante Ferro",
-          classroom: "",
-          students: "TDS2023-3S",
-          time: "21:50 - 22:40"
-        },
-        {
-          subject: "Inteligência Artificial e Sistemas Neurais - 724",
-          size: 1,
-          teacher: "Humberto Fioravante Ferro",
+          subject: "Desenvolvimento WEB - 721",
+          size: 2,
+          teacher: "Rafael Gil Ferques",
           classroom: "",
           students: "TDS2023-3S",
           time: "21:00 - 21:50"
-        },
-        {
-          subject: "Desenvolvimento para Dispositivos Móveis - 722",
-          size: 1,
-          teacher: "Rafael Luis Bartz",
-          classroom: "",
-          students: "TDS2023-3S",
-          time: "19:50 - 20:40"
         }
       ]
     },
@@ -44,35 +28,19 @@ const data = {
       timetable: [
         {
           subject: "Desenvolvimento WEB - 721",
-          size: 1,
+          size: 2,
           teacher: "Rafael Gil Ferques",
           classroom: "",
           students: "TDS2023-3S",
           time: "21:00 - 21:50"
         },
         {
-          subject: "Desenvolvimento WEB - 721",
-          size: 1,
-          teacher: "Rafael Gil Ferques",
+          subject: "Desenvolvimento para Dispositivos Móveis - 722",
+          size: 2,
+          teacher: "Rafael Luis Bartz",
           classroom: "",
           students: "TDS2023-3S",
           time: "19:00 - 19:50"
-        },
-        {
-          subject: "Desenvolvimento para Dispositivos Móveis - 722",
-          size: 1,
-          teacher: "Rafael Luis Bartz",
-          classroom: "",
-          students: "TDS2023-3S",
-          time: "19:50 - 20:40"
-        },
-        {
-          subject: "Programação para Sistemas Embarcados - 725",
-          size: 1,
-          teacher: "Rafael Luis Bartz",
-          classroom: "",
-          students: "TDS2023-3S",
-          time: "21:50 - 22:40"
         }
       ]
     },
@@ -80,32 +48,16 @@ const data = {
       title: "Quarta-Feira",
       timetable: [
         {
-          subject: "Desenvolvimento Baseado em Padrões e Frameworks - 726",
-          size: 1,
-          teacher: "Caroline Domingues Porto do Nascimento Barbieri",
-          classroom: "",
-          students: "TDS2023-3S",
-          time: "19:50 - 20:40"
-        },
-        {
-          subject: "Inteligência Artificial e Sistemas Neurais - 724",
-          size: 1,
-          teacher: "Humberto Fioravante Ferro",
-          classroom: "",
-          students: "TDS2023-3S",
-          time: "21:50 - 22:40"
-        },
-        {
-          subject: "Desenvolvimento para Dispositivos Móveis - 722",
-          size: 1,
-          teacher: "Rafael Luis Bartz",
+          subject: "Testes, Verificação e Validação de Sistemas - 723",
+          size: 2,
+          teacher: "Alexandre Rodrigues Monge",
           classroom: "",
           students: "TDS2023-3S",
           time: "19:00 - 19:50"
         },
         {
           subject: "Programação para Sistemas Embarcados - 725",
-          size: 1,
+          size: 2,
           teacher: "Rafael Luis Bartz",
           classroom: "",
           students: "TDS2023-3S",
@@ -117,33 +69,17 @@ const data = {
       title: "Quinta-Feira",
       timetable: [
         {
-          subject: "Desenvolvimento Baseado em Padrões e Frameworks - 726",
-          size: 1,
-          teacher: "Caroline Domingues Porto do Nascimento Barbieri",
+          subject: "Inteligência Artificial e Sistemas Neurais - 724",
+          size: 2,
+          teacher: "Humberto Fioravante Ferro",
           classroom: "",
           students: "TDS2023-3S",
           time: "21:00 - 21:50"
         },
         {
-          subject: "Testes, Verificação e Validação de Sistemas - 723",
-          size: 1,
-          teacher: "Caroline Domingues Porto do Nascimento Barbieri",
-          classroom: "",
-          students: "TDS2023-3S",
-          time: "19:50 - 20:40"
-        },
-        {
-          subject: "Desenvolvimento WEB - 721",
-          size: 1,
-          teacher: "Rafael Gil Ferques",
-          classroom: "",
-          students: "TDS2023-3S",
-          time: "21:50 - 22:40"
-        },
-        {
-          subject: "Desenvolvimento WEB - 721",
-          size: 1,
-          teacher: "Rafael Gil Ferques",
+          subject: "Desenvolvimento para Dispositivos Móveis - 722",
+          size: 2,
+          teacher: "Rafael Luis Bartz",
           classroom: "",
           students: "TDS2023-3S",
           time: "19:00 - 19:50"
@@ -154,33 +90,17 @@ const data = {
       title: "Sexta-Feira",
       timetable: [
         {
-          subject: "Inteligência Artificial e Sistemas Neurais - 724",
-          size: 1,
-          teacher: "Humberto Fioravante Ferro",
-          classroom: "",
-          students: "TDS2023-3S",
-          time: "19:50 - 20:40"
-        },
-        {
-          subject: "Desenvolvimento WEB - 721",
-          size: 1,
-          teacher: "Rafael Gil Ferques",
+          subject: "Desenvolvimento Baseado em Padrões e Frameworks - 726",
+          size: 2,
+          teacher: "Caroline Domingues Porto do Nascimento Barbieri",
           classroom: "",
           students: "TDS2023-3S",
           time: "19:00 - 19:50"
         },
         {
-          subject: "Desenvolvimento WEB - 721",
-          size: 1,
-          teacher: "Rafael Gil Ferques",
-          classroom: "",
-          students: "TDS2023-3S",
-          time: "21:50 - 22:40"
-        },
-        {
-          subject: "Desenvolvimento para Dispositivos Móveis - 722",
-          size: 1,
-          teacher: "Rafael Luis Bartz",
+          subject: "Inteligência Artificial e Sistemas Neurais - 724",
+          size: 2,
+          teacher: "Humberto Fioravante Ferro",
           classroom: "",
           students: "TDS2023-3S",
           time: "21:00 - 21:50"
