--- a/docs/professor/alexandre_rodrigues_monge.mdx
+++ b/docs/professor/alexandre_rodrigues_monge.mdx
@@ -13,7 +13,7 @@ const data = {
           subject: "Laboratório de Banco de Dados - 1238",
           size: 2,
           teacher: "Alexandre Rodrigues Monge",
-          classroom: "Laboratório de Informatica BioPark",
+          classroom: "",
           students: "IIW2022B",
           time: "07:30 - 08:20"
         },
@@ -21,29 +21,25 @@ const data = {
           subject: "Projeto Integrador II - 1239",
           size: 2,
           teacher: "Alexandre Rodrigues Monge",
-          classroom: "Laboratório de Informatica BioPark",
-          students: "IIW2022B",
+          classroom: "",
+          students: "IIW2022A",
+          time: "15:05 - 15:55"
+        },
+        {
+          subject: "Projeto integrador I - 1078",
+          size: 2,
+          teacher: "Alexandre Rodrigues Monge",
+          classroom: "",
+          students: "IIW2023B",
           time: "10:15 - 11:05"
         }
       ]
     },
     {
       title: "Quarta-Feira",
-      timetable: []
-    },
-    {
-      title: "Quinta-Feira",
       timetable: [
         {
-          subject: "Lógica de programação - 1075",
-          size: 2,
-          teacher: "Alexandre Rodrigues Monge",
-          classroom: "",
-          students: "IIW2023A",
-          time: "10:15 - 11:05"
-        },
-        {
-          subject: "Projeto Integrador II - 1239",
+          subject: "Laboratório de Banco de Dados - 1238",
           size: 2,
           teacher: "Alexandre Rodrigues Monge",
           classroom: "",
@@ -56,9 +52,21 @@ const data = {
           teacher: "Alexandre Rodrigues Monge",
           classroom: "",
           students: "IIW2023A",
-          time: "13:10 - 14:00"
+          time: "09:25 - 10:15"
+        },
+        {
+          subject: "Testes, Verificação e Validação de Sistemas - 723",
+          size: 2,
+          teacher: "Alexandre Rodrigues Monge",
+          classroom: "",
+          students: "TDS2023-3S",
+          time: "19:00 - 19:50"
         }
       ]
+    },
+    {
+      title: "Quinta-Feira",
+      timetable: []
     },
     {
       title: "Sexta-Feira",
