--- a/docs/professor/bruna_valeriano_da_silva_lisboa.mdx
+++ b/docs/professor/bruna_valeriano_da_silva_lisboa.mdx
@@ -6,58 +6,41 @@ const data = {
       title: "Segunda-Feira",
       timetable: [
         {
-          subject: "Educação Física 2 - 170",
+          subject: "Educação Física 1 - 123",
           size: 1,
           teacher: "Bruna Valeriano da Silva Lisboa",
           classroom: "",
-          students: "EIN2022",
+          students: "EIN2023",
           time: "11:05 - 11:55"
         },
-        {
-          subject: "Educação Física I - 2323",
-          size: 1,
-          teacher: "Bruna Valeriano da Silva Lisboa",
-          classroom: "",
-          students: "COM2023",
-          time: "09:25 - 10:15"
-        },
-        {
-          subject: "Educação Física I - 2323",
-          size: 1,
-          teacher: "Bruna Valeriano da Silva Lisboa",
-          classroom: "",
-          students: "COM2023",
-          time: "10:15 - 11:05"
-        },
-        {
-          subject: "Educação Física I - 457",
-          size: 1,
-          teacher: "Bruna Valeriano da Silva Lisboa",
-          classroom: "",
-          students: "AGO2023",
-          time: "13:10 - 14:00"
-        }
-      ]
-    },
-    {
-      title: "Terça-Feira",
-      timetable: [
         {
           subject: "Educação Física II - 1227",
           size: 2,
           teacher: "Bruna Valeriano da Silva Lisboa",
           classroom: "",
           students: "IIW2022A",
-          time: "07:30 - 08:20"
+          time: "09:25 - 10:15"
         }
       ]
+    },
+    {
+      title: "Terça-Feira",
+      timetable: []
     },
     {
       title: "Quarta-Feira",
       timetable: [
         {
-          subject: "Educação Física III - 1082",
+          subject: "Educação Física 3 - 203",
           size: 1,
+          teacher: "Bruna Valeriano da Silva Lisboa",
+          classroom: "",
+          students: "EIN2021",
+          time: "07:30 - 08:20"
+        },
+        {
+          subject: "Educação Física III - 1082",
+          size: 2,
           teacher: "Bruna Valeriano da Silva Lisboa",
           classroom: "",
           students: "AGO2021",
@@ -69,44 +52,12 @@ const data = {
       title: "Quinta-Feira",
       timetable: [
         {
-          subject: "Educação Física 1 - 123",
-          size: 1,
-          teacher: "Bruna Valeriano da Silva Lisboa",
-          classroom: "",
-          students: "EIN2023",
-          time: "10:15 - 11:05"
-        },
-        {
-          subject: "Educação Física 3 - 203",
-          size: 1,
-          teacher: "Bruna Valeriano da Silva Lisboa",
-          classroom: "",
-          students: "EIN2021",
-          time: "08:20 - 09:10"
-        },
-        {
-          subject: "Educação Física I - 1072",
+          subject: "Educação Física I - 457",
           size: 2,
           teacher: "Bruna Valeriano da Silva Lisboa",
           classroom: "",
-          students: "IIW2023A",
-          time: "15:05 - 15:55"
-        },
-        {
-          subject: "Educação Física II - 615",
-          size: 1,
-          teacher: "Bruna Valeriano da Silva Lisboa",
-          classroom: "",
-          students: "AGO2022",
-          time: "07:30 - 08:20"
-        },
-        {
-          subject: "Educação Física III - 1082",
-          size: 1,
-          teacher: "Bruna Valeriano da Silva Lisboa",
-          classroom: "",
-          students: "AGO2021",
-          time: "13:10 - 14:00"
+          students: "AGO2023",
+          time: "10:15 - 11:05"
         }
       ]
     },
@@ -114,20 +65,36 @@ const data = {
       title: "Sexta-Feira",
       timetable: [
         {
-          subject: "Educação Física I - 457",
+          subject: "Educação Física 2 - 170",
           size: 1,
           teacher: "Bruna Valeriano da Silva Lisboa",
           classroom: "",
-          students: "AGO2023",
+          students: "EIN2022",
+          time: "10:15 - 11:05"
+        },
+        {
+          subject: "Educação Física I - 1072",
+          size: 2,
+          teacher: "Bruna Valeriano da Silva Lisboa",
+          classroom: "",
+          students: "IIW2023A",
+          time: "13:10 - 14:00"
+        },
+        {
+          subject: "Educação Física I - 2323",
+          size: 2,
+          teacher: "Bruna Valeriano da Silva Lisboa",
+          classroom: "",
+          students: "COM2023",
           time: "15:05 - 15:55"
         },
         {
           subject: "Educação Física II - 615",
-          size: 1,
+          size: 2,
           teacher: "Bruna Valeriano da Silva Lisboa",
           classroom: "",
           students: "AGO2022",
-          time: "14:00 - 14:50"
+          time: "07:30 - 08:20"
         }
       ]
     }
