--- a/docs/professor/bruno_garcia_bonfim.mdx
+++ b/docs/professor/bruno_garcia_bonfim.mdx
@@ -4,34 +4,35 @@ const data = {
   weekClasses: [
     {
       title: "Segunda-Feira",
-      timetable: []
+      timetable: [
+        {
+          subject: "Física 3 - 205",
+          size: 2,
+          teacher: "Bruno Garcia Bonfim",
+          classroom: "",
+          students: "EIN2021",
+          time: "09:25 - 10:15"
+        }
+      ]
     },
     {
       title: "Terça-Feira",
       timetable: [
         {
-          subject: "Física 3 - 205",
+          subject: "Física 2 - 175",
           size: 1,
           teacher: "Bruno Garcia Bonfim",
           classroom: "",
-          students: "EIN2021",
-          time: "10:15 - 11:05"
-        },
-        {
-          subject: "Física 3 - 205",
-          size: 1,
-          teacher: "Bruno Garcia Bonfim",
-          classroom: "",
-          students: "EIN2021",
-          time: "07:30 - 08:20"
-        },
-        {
-          subject: "Física 4 - 224",
-          size: 1,
-          teacher: "Bruno Garcia Bonfim",
-          classroom: "",
-          students: "EIN2020",
+          students: "EIN2022",
           time: "09:25 - 10:15"
+        },
+        {
+          subject: "Física Aplicada - 597",
+          size: 2,
+          teacher: "Bruno Garcia Bonfim",
+          classroom: "",
+          students: "ELE2023",
+          time: "21:00 - 21:50"
         }
       ]
     },
@@ -40,27 +41,11 @@ const data = {
       timetable: [
         {
           subject: "Física 1 - 125",
-          size: 1,
+          size: 2,
           teacher: "Bruno Garcia Bonfim",
           classroom: "",
           students: "EIN2023",
           time: "10:15 - 11:05"
-        },
-        {
-          subject: "Física Aplicada - 597",
-          size: 1,
-          teacher: "Bruno Garcia Bonfim",
-          classroom: "",
-          students: "ELE2023",
-          time: "21:50 - 22:40"
-        },
-        {
-          subject: "Física I - 2325",
-          size: 1,
-          teacher: "Bruno Garcia Bonfim",
-          classroom: "",
-          students: "COM2023",
-          time: "11:05 - 11:55"
         }
       ]
     },
@@ -68,28 +53,12 @@ const data = {
       title: "Quinta-Feira",
       timetable: [
         {
-          subject: "Física 2 - 175",
-          size: 1,
-          teacher: "Bruno Garcia Bonfim",
-          classroom: "",
-          students: "EIN2022",
-          time: "10:15 - 11:05"
-        },
-        {
           subject: "Física 4 - 224",
-          size: 1,
+          size: 2,
           teacher: "Bruno Garcia Bonfim",
           classroom: "",
           students: "EIN2020",
-          time: "09:25 - 10:15"
-        },
-        {
-          subject: "Física Aplicada - 597",
-          size: 1,
-          teacher: "Bruno Garcia Bonfim",
-          classroom: "",
-          students: "ELE2023",
-          time: "19:50 - 20:40"
+          time: "07:30 - 08:20"
         }
       ]
     },
@@ -97,36 +66,20 @@ const data = {
       title: "Sexta-Feira",
       timetable: [
         {
-          subject: "Física 1 - 125",
-          size: 1,
-          teacher: "Bruno Garcia Bonfim",
-          classroom: "",
-          students: "EIN2023",
-          time: "08:20 - 09:10"
-        },
-        {
           subject: "Física Aplicada - 144",
-          size: 1,
+          size: 2,
           teacher: "Bruno Garcia Bonfim",
           classroom: "",
           students: "ELM2023",
           time: "21:00 - 21:50"
         },
         {
-          subject: "Física Aplicada - 144",
-          size: 1,
-          teacher: "Bruno Garcia Bonfim",
-          classroom: "",
-          students: "ELM2023",
-          time: "19:00 - 19:50"
-        },
-        {
           subject: "Física I - 2325",
-          size: 1,
+          size: 2,
           teacher: "Bruno Garcia Bonfim",
           classroom: "",
           students: "COM2023",
-          time: "14:00 - 14:50"
+          time: "07:30 - 08:20"
         }
       ]
     }
