--- a/docs/professor/daniele_de_almeida_paula.mdx
+++ b/docs/professor/daniele_de_almeida_paula.mdx
@@ -8,46 +8,37 @@ const data = {
     },
     {
       title: "Terça-Feira",
-      timetable: [
-        {
-          subject: "Gestão Ambiental e Desenvolvimento Sustentável - 1504",
-          size: 1,
-          teacher: "Daniele de Almeida Paula",
-          classroom: "",
-          students: "TGC2021",
-          time: "19:00 - 19:50"
-        }
-      ]
+      timetable: []
     },
     {
       title: "Quarta-Feira",
       timetable: [
         {
-          subject: "Agroindustrialização de Produtos de Origem Vegetal e Animal (APOVA) - 1094",
-          size: 1,
+          subject: "Gestão Ambiental e Desenvolvimento Sustentável - 1504",
+          size: 2,
           teacher: "Daniele de Almeida Paula",
           classroom: "",
-          students: "AGO2021 - Grupo A",
-          time: "11:05 - 11:55"
+          students: "TGC2021",
+          time: "21:00 - 21:50"
         }
       ]
     },
     {
       title: "Quinta-Feira",
-      timetable: [
-        {
-          subject: "Gestão Ambiental e Desenvolvimento Sustentável - 1504",
-          size: 1,
-          teacher: "Daniele de Almeida Paula",
-          classroom: "",
-          students: "TGC2021",
-          time: "19:50 - 20:40"
-        }
-      ]
+      timetable: []
     },
     {
       title: "Sexta-Feira",
-      timetable: []
+      timetable: [
+        {
+          subject: "(APOVA) - 1094",
+          size: 1,
+          teacher: "Daniele de Almeida Paula",
+          classroom: "",
+          students: "AGO2021 - GA",
+          time: "07:30 - 08:20"
+        }
+      ]
     }
   ],
   time: [
