--- a/docs/professor/eliana_pelicon_pereira_figueira.mdx
+++ b/docs/professor/eliana_pelicon_pereira_figueira.mdx
@@ -6,28 +6,36 @@ const data = {
       title: "Segunda-Feira",
       timetable: [
         {
-          subject: "Anatomia e morfologia vegetal - 63",
-          size: 1,
-          teacher: "Eliana Peliçon Pereira Figueira",
-          classroom: "",
-          students: "BIO_ESPECIAL",
-          time: "19:00 - 19:50"
-        },
-        {
-          subject: "Biologia 4 - 222",
-          size: 1,
-          teacher: "Eliana Peliçon Pereira Figueira",
-          classroom: "",
-          students: "EIN2020",
-          time: "07:30 - 08:20"
-        },
-        {
           subject: "Biologia I - 459",
-          size: 1,
+          size: 2,
           teacher: "Eliana Peliçon Pereira Figueira",
           classroom: "",
           students: "AGO2023",
           time: "09:25 - 10:15"
+        },
+        {
+          subject: "Embriologia animal e histologia - 502",
+          size: 1,
+          teacher: "Eliana Peliçon Pereira Figueira",
+          classroom: "",
+          students: "BIO_ESPECIAL_2",
+          time: "19:00 - 19:50"
+        },
+        {
+          subject: "Embriologia animal e histologia - 502",
+          size: 1,
+          teacher: "Eliana Peliçon Pereira Figueira",
+          classroom: "",
+          students: "BIO_ESPECIAL_2",
+          time: "21:50 - 22:40"
+        },
+        {
+          subject: "Embriologia animal e histologia - 502",
+          size: 1,
+          teacher: "Eliana Peliçon Pereira Figueira",
+          classroom: "",
+          students: "BIO_ESPECIAL_2",
+          time: "19:50 - 20:40"
         },
         {
           subject: "Embriologia animal e histologia - 502",
@@ -41,59 +49,18 @@ const data = {
     },
     {
       title: "Terça-Feira",
-      timetable: [
-        {
-          subject: "Biologia 4 - 222",
-          size: 1,
-          teacher: "Eliana Peliçon Pereira Figueira",
-          classroom: "",
-          students: "EIN2020",
-          time: "11:05 - 11:55"
-        },
-        {
-          subject: "Biologia I - 2324",
-          size: 1,
-          teacher: "Eliana Peliçon Pereira Figueira",
-          classroom: "",
-          students: "COM2023",
-          time: "15:05 - 15:55"
-        }
-      ]
+      timetable: []
     },
     {
       title: "Quarta-Feira",
       timetable: [
         {
-          subject: "Anatomia e morfologia vegetal - 63",
-          size: 1,
+          subject: "Biologia 4 - 222",
+          size: 2,
           teacher: "Eliana Peliçon Pereira Figueira",
           classroom: "",
-          students: "BIO_ESPECIAL",
-          time: "19:00 - 19:50"
-        },
-        {
-          subject: "Anatomia e morfologia vegetal - 63",
-          size: 1,
-          teacher: "Eliana Peliçon Pereira Figueira",
-          classroom: "",
-          students: "BIO_ESPECIAL",
-          time: "19:50 - 20:40"
-        },
-        {
-          subject: "Biologia I - 2324",
-          size: 1,
-          teacher: "Eliana Peliçon Pereira Figueira",
-          classroom: "",
-          students: "COM2023",
-          time: "14:00 - 14:50"
-        },
-        {
-          subject: "Embriologia animal e histologia - 502",
-          size: 1,
-          teacher: "Eliana Peliçon Pereira Figueira",
-          classroom: "",
-          students: "BIO_ESPECIAL_2",
-          time: "21:50 - 22:40"
+          students: "EIN2020",
+          time: "09:25 - 10:15"
         }
       ]
     },
@@ -101,12 +68,20 @@ const data = {
       title: "Quinta-Feira",
       timetable: [
         {
+          subject: "Anatomia e morfologia vegetal - 63",
+          size: 1,
+          teacher: "Eliana Peliçon Pereira Figueira",
+          classroom: "",
+          students: "BIO_ESPECIAL",
+          time: "21:00 - 21:50"
+        },
+        {
           subject: "Biologia 1 - 122",
           size: 1,
           teacher: "Eliana Peliçon Pereira Figueira",
           classroom: "",
           students: "EIN2023",
-          time: "07:30 - 08:20"
+          time: "11:05 - 11:55"
         }
       ]
     },
@@ -114,28 +89,20 @@ const data = {
       title: "Sexta-Feira",
       timetable: [
         {
-          subject: "Biologia I - 459",
-          size: 1,
+          subject: "Anatomia e morfologia vegetal - 63",
+          size: 2,
           teacher: "Eliana Peliçon Pereira Figueira",
           classroom: "",
-          students: "AGO2023",
-          time: "11:05 - 11:55"
+          students: "BIO_ESPECIAL",
+          time: "19:00 - 19:50"
         },
         {
-          subject: "Embriologia animal e histologia - 502",
-          size: 1,
+          subject: "Biologia I - 2324",
+          size: 2,
           teacher: "Eliana Peliçon Pereira Figueira",
           classroom: "",
-          students: "BIO_ESPECIAL_2",
-          time: "21:00 - 21:50"
-        },
-        {
-          subject: "Embriologia animal e histologia - 502",
-          size: 1,
-          teacher: "Eliana Peliçon Pereira Figueira",
-          classroom: "",
-          students: "BIO_ESPECIAL_2",
-          time: "21:50 - 22:40"
+          students: "COM2023",
+          time: "09:25 - 10:15"
         }
       ]
     }
