--- a/docs/professor/elias_franco.mdx
+++ b/docs/professor/elias_franco.mdx
@@ -6,44 +6,12 @@ const data = {
       title: "Segunda-Feira",
       timetable: [
         {
-          subject: "Construções e Instalações Rurais - 630",
-          size: 1,
+          subject: "Sociologia e extensão rural - 1087",
+          size: 2,
           teacher: "Elias Franco",
           classroom: "",
-          students: "AGO2022",
-          time: "11:05 - 11:55"
-        },
-        {
-          subject: "Gênese, Morfologia e Classificação dos Solos - 1465",
-          size: 1,
-          teacher: "Elias Franco",
-          classroom: "",
-          students: "AGR2023",
-          time: "19:00 - 19:50"
-        },
-        {
-          subject: "Horticultura - 1464",
-          size: 1,
-          teacher: "Elias Franco",
-          classroom: "",
-          students: "AGR2023",
-          time: "21:00 - 21:50"
-        },
-        {
-          subject: "Horticultura - 1464",
-          size: 1,
-          teacher: "Elias Franco",
-          classroom: "",
-          students: "AGR2023",
-          time: "19:50 - 20:40"
-        },
-        {
-          subject: "Sociologia Rural - 625",
-          size: 1,
-          teacher: "Elias Franco",
-          classroom: "",
-          students: "AGO2022",
-          time: "07:30 - 08:20"
+          students: "AGO2021",
+          time: "09:25 - 10:15"
         }
       ]
     },
@@ -51,36 +19,12 @@ const data = {
       title: "Terça-Feira",
       timetable: [
         {
-          subject: "Gênese, Morfologia e Classificação dos Solos - 1465",
-          size: 1,
-          teacher: "Elias Franco",
-          classroom: "",
-          students: "AGR2023",
-          time: "21:00 - 21:50"
-        },
-        {
-          subject: "Gênese, Morfologia e Classificação dos Solos - 1465",
-          size: 1,
-          teacher: "Elias Franco",
-          classroom: "",
-          students: "AGR2023",
-          time: "21:50 - 22:40"
-        },
-        {
           subject: "Horticultura - 1464",
-          size: 1,
+          size: 2,
           teacher: "Elias Franco",
           classroom: "",
           students: "AGR2023",
-          time: "19:50 - 20:40"
-        },
-        {
-          subject: "Sociologia e extensão rural - 1087",
-          size: 1,
-          teacher: "Elias Franco",
-          classroom: "",
-          students: "AGO2021",
-          time: "14:00 - 14:50"
+          time: "19:00 - 19:50"
         }
       ]
     },
@@ -88,69 +32,62 @@ const data = {
       title: "Quarta-Feira",
       timetable: [
         {
-          subject: "Sistemas Agroflorestais - 629",
-          size: 1,
+          subject: "Gênese, Morfologia e Classificação dos Solos - 1465",
+          size: 2,
+          teacher: "Elias Franco",
+          classroom: "",
+          students: "AGR2023",
+          time: "19:00 - 19:50"
+        },
+        {
+          subject: "Sociologia Rural - 625",
+          size: 2,
           teacher: "Elias Franco",
           classroom: "",
           students: "AGO2022",
-          time: "07:30 - 08:20"
-        },
-        {
-          subject: "Sociologia e extensão rural - 1087",
-          size: 1,
-          teacher: "Elias Franco",
-          classroom: "",
-          students: "AGO2021",
-          time: "08:20 - 09:10"
+          time: "10:15 - 11:05"
         }
       ]
     },
     {
       title: "Quinta-Feira",
-      timetable: []
-    },
-    {
-      title: "Sexta-Feira",
       timetable: [
         {
-          subject: "Construções e Instalações Rurais - 630",
-          size: 1,
-          teacher: "Elias Franco",
-          classroom: "",
-          students: "AGO2022",
-          time: "11:05 - 11:55"
-        },
-        {
           subject: "Gênese, Morfologia e Classificação dos Solos - 1465",
-          size: 1,
+          size: 2,
           teacher: "Elias Franco",
           classroom: "",
           students: "AGR2023",
           time: "21:00 - 21:50"
         },
         {
+          subject: "Sistemas Agroflorestais - 629",
+          size: 2,
+          teacher: "Elias Franco",
+          classroom: "",
+          students: "AGO2022",
+          time: "13:10 - 14:00"
+        }
+      ]
+    },
+    {
+      title: "Sexta-Feira",
+      timetable: [
+        {
+          subject: "Construções e Instalações Rurais - 630",
+          size: 2,
+          teacher: "Elias Franco",
+          classroom: "",
+          students: "AGO2022",
+          time: "13:10 - 14:00"
+        },
+        {
           subject: "Horticultura - 1464",
-          size: 1,
+          size: 2,
           teacher: "Elias Franco",
           classroom: "",
           students: "AGR2023",
-          time: "19:50 - 20:40"
-        },
-        {
-          subject: "Sistemas Agroflorestais - 629",
-          size: 1,
-          teacher: "Elias Franco",
-          classroom: "",
-          students: "AGO2022",
-          time: "10:15 - 11:05"
-        },
-        {
-          subject: "Sociologia Rural - 625",
-          size: 1,
-          teacher: "Elias Franco",
-          classroom: "",
-          students: "AGO2022",
-          time: "15:05 - 15:55"
+          time: "19:00 - 19:50"
         }
       ]
     }
