--- a/docs/professor/jhones_donizetti_mendes.mdx
+++ b/docs/professor/jhones_donizetti_mendes.mdx
@@ -6,25 +6,63 @@ const data = {
       title: "Segunda-Feira",
       timetable: [
         {
-          subject: "Geografia 2 - 177",
+          subject: "Geografia 3 - 206",
           size: 1,
           teacher: "Jhones Donizetti Mendes",
           classroom: "",
-          students: "EIN2022",
-          time: "08:20 - 09:10"
-        },
-        {
-          subject: "Geografia 4 - 227",
-          size: 1,
-          teacher: "Jhones Donizetti Mendes",
-          classroom: "",
-          students: "EIN2020",
+          students: "EIN2021",
           time: "11:05 - 11:55"
         }
       ]
     },
     {
       title: "Terça-Feira",
+      timetable: [
+        {
+          subject: "Geografia II - 623",
+          size: 2,
+          teacher: "Jhones Donizetti Mendes",
+          classroom: "",
+          students: "AGO2022",
+          time: "07:30 - 08:20"
+        },
+        {
+          subject: "Trabalho de conclusão de curso I - 484",
+          size: 1,
+          teacher: "Jhones Donizetti Mendes",
+          classroom: "",
+          students: "BIO2020",
+          time: "21:00 - 21:50"
+        }
+      ]
+    },
+    {
+      title: "Quarta-Feira",
+      timetable: [
+        {
+          subject: "Geografia 2 - 177",
+          size: 1,
+          teacher: "Jhones Donizetti Mendes",
+          classroom: "",
+          students: "EIN2022",
+          time: "11:05 - 11:55"
+        },
+        {
+          subject: "Geografia I - 463",
+          size: 2,
+          teacher: "Jhones Donizetti Mendes",
+          classroom: "",
+          students: "AGO2023",
+          time: "13:10 - 14:00"
+        }
+      ]
+    },
+    {
+      title: "Quinta-Feira",
+      timetable: []
+    },
+    {
+      title: "Sexta-Feira",
       timetable: [
         {
           subject: "Geografia 1 - 126",
@@ -36,48 +74,11 @@ const data = {
         },
         {
           subject: "Geografia 4 - 227",
-          size: 1,
+          size: 2,
           teacher: "Jhones Donizetti Mendes",
           classroom: "",
           students: "EIN2020",
-          time: "10:15 - 11:05"
-        },
-        {
-          subject: "Geografia I - 463",
-          size: 1,
-          teacher: "Jhones Donizetti Mendes",
-          classroom: "",
-          students: "AGO2023",
           time: "09:25 - 10:15"
-        },
-        {
-          subject: "Trabalho de conclusão de curso I - 484",
-          size: 1,
-          teacher: "Jhones Donizetti Mendes",
-          classroom: "",
-          students: "BIO2020",
-          time: "21:50 - 22:40"
-        }
-      ]
-    },
-    {
-      title: "Quarta-Feira",
-      timetable: [
-        {
-          subject: "Geografia 3 - 206",
-          size: 1,
-          teacher: "Jhones Donizetti Mendes",
-          classroom: "",
-          students: "EIN2021",
-          time: "11:05 - 11:55"
-        },
-        {
-          subject: "Geografia II - 623",
-          size: 1,
-          teacher: "Jhones Donizetti Mendes",
-          classroom: "",
-          students: "AGO2022",
-          time: "08:20 - 09:10"
         },
         {
           subject: "Trabalho de conclusão de curso I - 484",
@@ -86,32 +87,6 @@ const data = {
           classroom: "",
           students: "BIO2020",
           time: "19:50 - 20:40"
-        }
-      ]
-    },
-    {
-      title: "Quinta-Feira",
-      timetable: [
-        {
-          subject: "Geografia I - 463",
-          size: 1,
-          teacher: "Jhones Donizetti Mendes",
-          classroom: "",
-          students: "AGO2023",
-          time: "09:25 - 10:15"
-        }
-      ]
-    },
-    {
-      title: "Sexta-Feira",
-      timetable: [
-        {
-          subject: "Geografia II - 623",
-          size: 1,
-          teacher: "Jhones Donizetti Mendes",
-          classroom: "",
-          students: "AGO2022",
-          time: "09:25 - 10:15"
         }
       ]
     }
