--- a/docs/professor/joaquim_jose_honorio_de_lima.mdx
+++ b/docs/professor/joaquim_jose_honorio_de_lima.mdx
@@ -4,35 +4,34 @@ const data = {
   weekClasses: [
     {
       title: "Segunda-Feira",
-      timetable: [
-        {
-          subject: "Informática Instrumental - 596",
-          size: 1,
-          teacher: "Joaquim José Honório de Lima",
-          classroom: "",
-          students: "ELE2023",
-          time: "19:50 - 20:40"
-        }
-      ]
+      timetable: []
     },
     {
       title: "Terça-Feira",
       timetable: [
         {
           subject: "Informática Instrumental - 1532",
-          size: 1,
+          size: 2,
           teacher: "Joaquim José Honório de Lima",
           classroom: "",
           students: "EIN2023",
-          time: "09:25 - 10:15"
+          time: "07:30 - 08:20"
+        },
+        {
+          subject: "Informática Instrumental - 596",
+          size: 2,
+          teacher: "Joaquim José Honório de Lima",
+          classroom: "",
+          students: "ELE2023",
+          time: "19:00 - 19:50"
         },
         {
           subject: "Informática instrumental e aplicada - 468",
-          size: 1,
+          size: 2,
           teacher: "Joaquim José Honório de Lima",
           classroom: "",
-          students: "AGO2023 - Grupo B",
-          time: "11:05 - 11:55"
+          students: "AGO2023 - GA",
+          time: "10:15 - 11:05"
         }
       ]
     },
@@ -40,56 +39,22 @@ const data = {
       title: "Quarta-Feira",
       timetable: [
         {
-          subject: "Informática Instrumental - 1532",
-          size: 1,
-          teacher: "Joaquim José Honório de Lima",
-          classroom: "",
-          students: "EIN2023",
-          time: "09:25 - 10:15"
-        },
-        {
-          subject: "Informática Instrumental - 596",
-          size: 1,
-          teacher: "Joaquim José Honório de Lima",
-          classroom: "",
-          students: "ELE2023",
-          time: "19:50 - 20:40"
-        },
-        {
           subject: "Informática instrumental e aplicada - 468",
-          size: 1,
+          size: 2,
           teacher: "Joaquim José Honório de Lima",
           classroom: "",
-          students: "AGO2023 - Grupo B",
-          time: "08:20 - 09:10"
+          students: "AGO2023 - GB",
+          time: "15:05 - 15:55"
         }
       ]
     },
     {
       title: "Quinta-Feira",
-      timetable: [
-        {
-          subject: "Informática instrumental e aplicada - 468",
-          size: 1,
-          teacher: "Joaquim José Honório de Lima",
-          classroom: "",
-          students: "AGO2023 - Grupo A",
-          time: "10:15 - 11:05"
-        }
-      ]
+      timetable: []
     },
     {
       title: "Sexta-Feira",
-      timetable: [
-        {
-          subject: "Informática instrumental e aplicada - 468",
-          size: 1,
-          teacher: "Joaquim José Honório de Lima",
-          classroom: "",
-          students: "AGO2023 - Grupo A",
-          time: "09:25 - 10:15"
-        }
-      ]
+      timetable: []
     }
   ],
   time: [
