--- a/docs/professor/karen_cristina_guedes_silva.mdx
+++ b/docs/professor/karen_cristina_guedes_silva.mdx
@@ -12,41 +12,32 @@ const data = {
     },
     {
       title: "Quarta-Feira",
-      timetable: [
-        {
-          subject: "Agroindustrialização de Produtos de Origem Vegetal e Animal (APOVA) - 1094",
-          size: 1,
-          teacher: "Karen Cristina Guedes Silva",
-          classroom: "",
-          students: "AGO2021 - Grupo B",
-          time: "11:05 - 11:55"
-        },
-        {
-          subject: "Métodos e Técnicas de Pesquisa Aplicada - 1513",
-          size: 1,
-          teacher: "Karen Cristina Guedes Silva",
-          classroom: "",
-          students: "TGC2023",
-          time: "19:50 - 20:40"
-        }
-      ]
+      timetable: []
     },
     {
       title: "Quinta-Feira",
-      timetable: [
-        {
-          subject: "Métodos e Técnicas de Pesquisa Aplicada - 1513",
-          size: 1,
-          teacher: "Karen Cristina Guedes Silva",
-          classroom: "",
-          students: "TGC2023",
-          time: "21:50 - 22:40"
-        }
-      ]
+      timetable: []
     },
     {
       title: "Sexta-Feira",
-      timetable: []
+      timetable: [
+        {
+          subject: "(APOVA) - 1094",
+          size: 1,
+          teacher: "Karen Cristina Guedes Silva",
+          classroom: "",
+          students: "AGO2021 - GB",
+          time: "07:30 - 08:20"
+        },
+        {
+          subject: "Métodos e Técnicas de Pesquisa Aplicada - 1513",
+          size: 2,
+          teacher: "Karen Cristina Guedes Silva",
+          classroom: "",
+          students: "TGC2023",
+          time: "21:00 - 21:50"
+        }
+      ]
     }
   ],
   time: [
