--- a/docs/professor/karina_dias_espartosa.mdx
+++ b/docs/professor/karina_dias_espartosa.mdx
@@ -6,70 +6,25 @@ const data = {
       title: "Segunda-Feira",
       timetable: [
         {
-          subject: "Biologia 3 - 202",
-          size: 1,
+          subject: "Biologia II - 616",
+          size: 2,
           teacher: "Karina Dias Espartosa",
           classroom: "",
-          students: "EIN2021",
-          time: "11:05 - 11:55"
+          students: "AGO2022",
+          time: "13:10 - 14:00"
         },
         {
-          subject: "Sistemática vegetal I - 660",
+          subject: "Bioquímica - 71",
           size: 1,
           teacher: "Karina Dias Espartosa",
           classroom: "",
           students: "BIO_ESPECIAL",
           time: "19:50 - 20:40"
-        },
-        {
-          subject: "Sistemática vegetal I - 660",
-          size: 1,
-          teacher: "Karina Dias Espartosa",
-          classroom: "",
-          students: "BIO_ESPECIAL",
-          time: "21:50 - 22:40"
         }
       ]
     },
     {
       title: "Terça-Feira",
-      timetable: [
-        {
-          subject: "Biologia 3 - 202",
-          size: 1,
-          teacher: "Karina Dias Espartosa",
-          classroom: "",
-          students: "EIN2021",
-          time: "08:20 - 09:10"
-        },
-        {
-          subject: "Biologia II - 616",
-          size: 1,
-          teacher: "Karina Dias Espartosa",
-          classroom: "",
-          students: "AGO2022",
-          time: "07:30 - 08:20"
-        },
-        {
-          subject: "Bioquímica - 71",
-          size: 1,
-          teacher: "Karina Dias Espartosa",
-          classroom: "",
-          students: "BIO_ESPECIAL",
-          time: "19:50 - 20:40"
-        },
-        {
-          subject: "Bioquímica - 71",
-          size: 1,
-          teacher: "Karina Dias Espartosa",
-          classroom: "",
-          students: "BIO_ESPECIAL",
-          time: "19:00 - 19:50"
-        }
-      ]
-    },
-    {
-      title: "Quarta-Feira",
       timetable: [
         {
           subject: "Biologia II - 1228",
@@ -78,6 +33,51 @@ const data = {
           classroom: "",
           students: "IIW2022A",
           time: "13:10 - 14:00"
+        },
+        {
+          subject: "Bioquímica - 71",
+          size: 1,
+          teacher: "Karina Dias Espartosa",
+          classroom: "",
+          students: "BIO_ESPECIAL",
+          time: "19:00 - 19:50"
+        },
+        {
+          subject: "Bioquímica - 71",
+          size: 1,
+          teacher: "Karina Dias Espartosa",
+          classroom: "",
+          students: "BIO_ESPECIAL",
+          time: "19:50 - 20:40"
+        }
+      ]
+    },
+    {
+      title: "Quarta-Feira",
+      timetable: [
+        {
+          subject: "Biologia 3 - 202",
+          size: 2,
+          teacher: "Karina Dias Espartosa",
+          classroom: "",
+          students: "EIN2021",
+          time: "09:25 - 10:15"
+        },
+        {
+          subject: "Sistemática vegetal I - 660",
+          size: 1,
+          teacher: "Karina Dias Espartosa",
+          classroom: "",
+          students: "BIO_ESPECIAL",
+          time: "21:50 - 22:40"
+        },
+        {
+          subject: "Sistemática vegetal I - 660",
+          size: 1,
+          teacher: "Karina Dias Espartosa",
+          classroom: "",
+          students: "BIO_ESPECIAL",
+          time: "19:00 - 19:50"
         }
       ]
     },
@@ -90,46 +90,29 @@ const data = {
           teacher: "Karina Dias Espartosa",
           classroom: "",
           students: "BIO_ESPECIAL",
-          time: "21:00 - 21:50"
+          time: "19:00 - 19:50"
         },
         {
-          subject: "Bioquímica - 71",
+          subject: "Sistemática vegetal I - 660",
           size: 1,
           teacher: "Karina Dias Espartosa",
           classroom: "",
           students: "BIO_ESPECIAL",
           time: "21:50 - 22:40"
+        },
+        {
+          subject: "Sistemática vegetal I - 660",
+          size: 1,
+          teacher: "Karina Dias Espartosa",
+          classroom: "",
+          students: "BIO_ESPECIAL",
+          time: "19:50 - 20:40"
         }
       ]
     },
     {
       title: "Sexta-Feira",
-      timetable: [
-        {
-          subject: "Biologia II - 616",
-          size: 1,
-          teacher: "Karina Dias Espartosa",
-          classroom: "",
-          students: "AGO2022",
-          time: "07:30 - 08:20"
-        },
-        {
-          subject: "Sistemática vegetal I - 660",
-          size: 1,
-          teacher: "Karina Dias Espartosa",
-          classroom: "",
-          students: "BIO_ESPECIAL",
-          time: "21:50 - 22:40"
-        },
-        {
-          subject: "Sistemática vegetal I - 660",
-          size: 1,
-          teacher: "Karina Dias Espartosa",
-          classroom: "",
-          students: "BIO_ESPECIAL",
-          time: "21:00 - 21:50"
-        }
-      ]
+      timetable: []
     }
   ],
   time: [
