--- a/docs/professor/luis_henrique_manosso_von_mecheln.mdx
+++ b/docs/professor/luis_henrique_manosso_von_mecheln.mdx
@@ -6,12 +6,12 @@ const data = {
       title: "Segunda-Feira",
       timetable: [
         {
-          subject: "Desenvolvimento Responsivo e Otimização de Sites - 1249",
+          subject: "Linguagens de apresentação e estruturação de conteúdos - 1074",
           size: 2,
           teacher: "Luis Henrique Manosso Von Mecheln",
           classroom: "",
-          students: "IIW2021",
-          time: "13:10 - 14:00"
+          students: "IIW2023B",
+          time: "09:25 - 10:15"
         }
       ]
     },
@@ -19,53 +19,43 @@ const data = {
       title: "Terça-Feira",
       timetable: [
         {
+          subject: "Desenvolvimento Responsivo e Otimização de Sites - 1249",
+          size: 2,
+          teacher: "Luis Henrique Manosso Von Mecheln",
+          classroom: "",
+          students: "IIW2021",
+          time: "09:25 - 10:15"
+        },
+        {
           subject: "Desenvolvimento WEB Orientado a Objetos - 1237",
           size: 2,
           teacher: "Luis Henrique Manosso Von Mecheln",
           classroom: "",
           students: "IIW2022A",
-          time: "13:10 - 14:00"
-        }
-      ]
-    },
-    {
-      title: "Quarta-Feira",
-      timetable: [
-        {
-          subject: "Linguagens de apresentação e estruturação de conteúdos - 1074",
-          size: 2,
-          teacher: "Luis Henrique Manosso Von Mecheln",
-          classroom: "Laboratório de Informatica BioPark",
-          students: "IIW2023B",
           time: "07:30 - 08:20"
         }
       ]
     },
     {
+      title: "Quarta-Feira",
+      timetable: []
+    },
+    {
       title: "Quinta-Feira",
       timetable: [
         {
-          subject: "Sistemas Gerenciadores de Conteúdo WEB - 1252",
+          subject: "Linguagens de apresentação e estruturação de conteúdos - 1074",
           size: 2,
           teacher: "Luis Henrique Manosso Von Mecheln",
           classroom: "",
-          students: "IIW2021",
+          students: "IIW2023B",
           time: "07:30 - 08:20"
         }
       ]
     },
     {
       title: "Sexta-Feira",
-      timetable: [
-        {
-          subject: "Linguagens de apresentação e estruturação de conteúdos - 1074",
-          size: 2,
-          teacher: "Luis Henrique Manosso Von Mecheln",
-          classroom: "Laboratório de Informatica BioPark",
-          students: "IIW2023B",
-          time: "07:30 - 08:20"
-        }
-      ]
+      timetable: []
     }
   ],
   time: [
