--- a/docs/professor/luiz_inacio_chaves.mdx
+++ b/docs/professor/luiz_inacio_chaves.mdx
@@ -7,57 +7,15 @@ const data = {
       timetable: [
         {
           subject: "Máquinas Térmicas de Fluxo - 111",
-          size: 1,
+          size: 2,
           teacher: "Luiz Inácio Chaves",
           classroom: "",
           students: "ELM2022",
           time: "21:00 - 21:50"
         },
         {
-          subject: "Máquinas Térmicas e de Fluxo - 218",
-          size: 1,
-          teacher: "Luiz Inácio Chaves",
-          classroom: "",
-          students: "EIN2020",
-          time: "09:25 - 10:15"
-        }
-      ]
-    },
-    {
-      title: "Terça-Feira",
-      timetable: [
-        {
-          subject: "Máquinas Térmicas de Fluxo - 111",
-          size: 1,
-          teacher: "Luiz Inácio Chaves",
-          classroom: "",
-          students: "ELM2022",
-          time: "19:50 - 20:40"
-        }
-      ]
-    },
-    {
-      title: "Quarta-Feira",
-      timetable: [
-        {
-          subject: "Processos de Fabricação 2 - 1573",
-          size: 1,
-          teacher: "Luiz Inácio Chaves",
-          classroom: "",
-          students: "EIN2021",
-          time: "10:15 - 11:05"
-        },
-        {
-          subject: "Processos de Fabricação 3 - 1590",
-          size: 1,
-          teacher: "Luiz Inácio Chaves",
-          classroom: "",
-          students: "EIN2020",
-          time: "09:25 - 10:15"
-        },
-        {
           subject: "Processos de Fabricação I - 149",
-          size: 1,
+          size: 2,
           teacher: "Luiz Inácio Chaves",
           classroom: "",
           students: "ELM2023",
@@ -66,23 +24,32 @@ const data = {
       ]
     },
     {
+      title: "Terça-Feira",
+      timetable: [
+        {
+          subject: "Processos de Fabricação 3 - 1590",
+          size: 2,
+          teacher: "Luiz Inácio Chaves",
+          classroom: "",
+          students: "EIN2020",
+          time: "10:15 - 11:05"
+        }
+      ]
+    },
+    {
+      title: "Quarta-Feira",
+      timetable: []
+    },
+    {
       title: "Quinta-Feira",
       timetable: [
         {
-          subject: "Máquinas Térmicas de Fluxo - 111",
-          size: 1,
+          subject: "Processos de Fabricação 2 - 1573",
+          size: 2,
           teacher: "Luiz Inácio Chaves",
           classroom: "",
-          students: "ELM2022",
-          time: "19:50 - 20:40"
-        },
-        {
-          subject: "Máquinas Térmicas de Fluxo - 111",
-          size: 1,
-          teacher: "Luiz Inácio Chaves",
-          classroom: "",
-          students: "ELM2022",
-          time: "21:00 - 21:50"
+          students: "EIN2021",
+          time: "10:15 - 11:05"
         }
       ]
     },
@@ -90,36 +57,20 @@ const data = {
       title: "Sexta-Feira",
       timetable: [
         {
+          subject: "Máquinas Térmicas de Fluxo - 111",
+          size: 2,
+          teacher: "Luiz Inácio Chaves",
+          classroom: "",
+          students: "ELM2022",
+          time: "19:00 - 19:50"
+        },
+        {
           subject: "Máquinas Térmicas e de Fluxo - 218",
-          size: 1,
+          size: 2,
           teacher: "Luiz Inácio Chaves",
           classroom: "",
           students: "EIN2020",
-          time: "09:25 - 10:15"
-        },
-        {
-          subject: "Processos de Fabricação 2 - 1573",
-          size: 1,
-          teacher: "Luiz Inácio Chaves",
-          classroom: "",
-          students: "EIN2021",
-          time: "10:15 - 11:05"
-        },
-        {
-          subject: "Processos de Fabricação 3 - 1590",
-          size: 1,
-          teacher: "Luiz Inácio Chaves",
-          classroom: "",
-          students: "EIN2020",
-          time: "08:20 - 09:10"
-        },
-        {
-          subject: "Processos de Fabricação I - 149",
-          size: 1,
-          teacher: "Luiz Inácio Chaves",
-          classroom: "",
-          students: "ELM2023",
-          time: "19:50 - 20:40"
+          time: "07:30 - 08:20"
         }
       ]
     }
