--- a/docs/professor/paula_magalhaes_souza_deccache.mdx
+++ b/docs/professor/paula_magalhaes_souza_deccache.mdx
@@ -6,20 +6,12 @@ const data = {
       title: "Segunda-Feira",
       timetable: [
         {
-          subject: "Biologia 2 - 168",
-          size: 1,
-          teacher: "Paula Magalhães Souza Deccache",
-          classroom: "",
-          students: "EIN2022",
-          time: "09:25 - 10:15"
-        },
-        {
           subject: "Zoologia dos cordados II - 483",
           size: 1,
           teacher: "Paula Magalhães Souza Deccache",
           classroom: "",
           students: "BIO2020",
-          time: "19:50 - 20:40"
+          time: "19:00 - 19:50"
         }
       ]
     },
@@ -32,7 +24,15 @@ const data = {
           teacher: "Paula Magalhães Souza Deccache",
           classroom: "",
           students: "IIW2023A",
-          time: "09:25 - 10:15"
+          time: "07:30 - 08:20"
+        },
+        {
+          subject: "Zoologia dos cordados II - 483",
+          size: 1,
+          teacher: "Paula Magalhães Souza Deccache",
+          classroom: "",
+          students: "BIO2020",
+          time: "19:00 - 19:50"
         }
       ]
     },
@@ -51,7 +51,16 @@ const data = {
     },
     {
       title: "Quinta-Feira",
-      timetable: []
+      timetable: [
+        {
+          subject: "Biologia 2 - 168",
+          size: 1,
+          teacher: "Paula Magalhães Souza Deccache",
+          classroom: "",
+          students: "EIN2022",
+          time: "09:25 - 10:15"
+        }
+      ]
     },
     {
       title: "Sexta-Feira",
@@ -62,15 +71,7 @@ const data = {
           teacher: "Paula Magalhães Souza Deccache",
           classroom: "",
           students: "IIW2023B",
-          time: "09:25 - 10:15"
-        },
-        {
-          subject: "Zoologia dos cordados II - 483",
-          size: 1,
-          teacher: "Paula Magalhães Souza Deccache",
-          classroom: "",
-          students: "BIO2020",
-          time: "21:00 - 21:50"
+          time: "07:30 - 08:20"
         }
       ]
     }
