--- a/docs/professor/pedro_leites_junior.mdx
+++ b/docs/professor/pedro_leites_junior.mdx
@@ -4,6 +4,14 @@ const data = {
   weekClasses: [
     {
       title: "Segunda-Feira",
+      timetable: []
+    },
+    {
+      title: "Terça-Feira",
+      timetable: []
+    },
+    {
+      title: "Quarta-Feira",
       timetable: [
         {
           subject: "Língua Portuguesa e Literatura I - 455",
@@ -11,41 +19,7 @@ const data = {
           teacher: "Pedro Leites Junior",
           classroom: "",
           students: "AGO2023",
-          time: "08:20 - 09:10"
-        },
-        {
-          subject: "Língua Portuguesa e Literatura II - 613",
-          size: 1,
-          teacher: "Pedro Leites Junior",
-          classroom: "",
-          students: "AGO2022",
-          time: "10:15 - 11:05"
-        }
-      ]
-    },
-    {
-      title: "Terça-Feira",
-      timetable: [
-        {
-          subject: "Língua Portuguesa e Literatura III - 1081",
-          size: 1,
-          teacher: "Pedro Leites Junior",
-          classroom: "",
-          students: "AGO2021",
           time: "09:25 - 10:15"
-        }
-      ]
-    },
-    {
-      title: "Quarta-Feira",
-      timetable: [
-        {
-          subject: "Língua Portuguesa e Literatura II - 613",
-          size: 1,
-          teacher: "Pedro Leites Junior",
-          classroom: "",
-          students: "AGO2022",
-          time: "10:15 - 11:05"
         }
       ]
     },
@@ -53,12 +27,12 @@ const data = {
       title: "Quinta-Feira",
       timetable: [
         {
-          subject: "Língua Portuguesa e Literatura I - 455",
-          size: 1,
+          subject: "Língua Portuguesa e Literatura II - 613",
+          size: 2,
           teacher: "Pedro Leites Junior",
           classroom: "",
-          students: "AGO2023",
-          time: "08:20 - 09:10"
+          students: "AGO2022",
+          time: "07:30 - 08:20"
         },
         {
           subject: "Língua Portuguesa e Literatura II - 613",
@@ -66,23 +40,15 @@ const data = {
           teacher: "Pedro Leites Junior",
           classroom: "",
           students: "AGO2022",
-          time: "10:15 - 11:05"
+          time: "11:05 - 11:55"
         },
         {
           subject: "Língua Portuguesa e Literatura III - 1081",
-          size: 1,
+          size: 2,
           teacher: "Pedro Leites Junior",
           classroom: "",
           students: "AGO2021",
-          time: "07:30 - 08:20"
-        },
-        {
-          subject: "Língua Portuguesa e Literatura III - 1081",
-          size: 1,
-          teacher: "Pedro Leites Junior",
-          classroom: "",
-          students: "AGO2021",
-          time: "15:05 - 15:55"
+          time: "13:10 - 14:00"
         }
       ]
     },
@@ -91,11 +57,19 @@ const data = {
       timetable: [
         {
           subject: "Língua Portuguesa e Literatura I - 455",
-          size: 1,
+          size: 2,
           teacher: "Pedro Leites Junior",
           classroom: "",
           students: "AGO2023",
-          time: "07:30 - 08:20"
+          time: "15:05 - 15:55"
+        },
+        {
+          subject: "Língua Portuguesa e Literatura III - 1081",
+          size: 1,
+          teacher: "Pedro Leites Junior",
+          classroom: "",
+          students: "AGO2021",
+          time: "08:20 - 09:10"
         }
       ]
     }
