--- a/docs/professor/rafael_luis_bartz.mdx
+++ b/docs/professor/rafael_luis_bartz.mdx
@@ -4,35 +4,26 @@ const data = {
   weekClasses: [
     {
       title: "Segunda-Feira",
-      timetable: [
-        {
-          subject: "Desenvolvimento para Dispositivos Móveis - 722",
-          size: 1,
-          teacher: "Rafael Luis Bartz",
-          classroom: "",
-          students: "TDS2023-3S",
-          time: "19:50 - 20:40"
-        }
-      ]
+      timetable: []
     },
     {
       title: "Terça-Feira",
       timetable: [
         {
-          subject: "Desenvolvimento para Dispositivos Móveis - 722",
-          size: 1,
+          subject: "Desenvolvimento WEB Orientado a Objetos - 1237",
+          size: 2,
           teacher: "Rafael Luis Bartz",
           classroom: "",
-          students: "TDS2023-3S",
-          time: "19:50 - 20:40"
+          students: "IIW2022B",
+          time: "09:25 - 10:15"
         },
         {
-          subject: "Programação para Sistemas Embarcados - 725",
-          size: 1,
+          subject: "Desenvolvimento para Dispositivos Móveis - 722",
+          size: 2,
           teacher: "Rafael Luis Bartz",
           classroom: "",
           students: "TDS2023-3S",
-          time: "21:50 - 22:40"
+          time: "19:00 - 19:50"
         }
       ]
     },
@@ -40,16 +31,8 @@ const data = {
       title: "Quarta-Feira",
       timetable: [
         {
-          subject: "Desenvolvimento para Dispositivos Móveis - 722",
-          size: 1,
-          teacher: "Rafael Luis Bartz",
-          classroom: "",
-          students: "TDS2023-3S",
-          time: "19:00 - 19:50"
-        },
-        {
           subject: "Programação para Sistemas Embarcados - 725",
-          size: 1,
+          size: 2,
           teacher: "Rafael Luis Bartz",
           classroom: "",
           students: "TDS2023-3S",
@@ -61,35 +44,18 @@ const data = {
       title: "Quinta-Feira",
       timetable: [
         {
-          subject: "Desenvolvimento WEB Orientado a Objetos - 1237",
+          subject: "Desenvolvimento para Dispositivos Móveis - 722",
           size: 2,
           teacher: "Rafael Luis Bartz",
-          classroom: "Laboratório de Informatica BioPark",
-          students: "IIW2022B",
-          time: "10:15 - 11:05"
-        },
-        {
-          subject: "Lógica de programação - 1075",
-          size: 2,
-          teacher: "Rafael Luis Bartz",
-          classroom: "Laboratório de Informatica BioPark",
-          students: "IIW2023B",
-          time: "07:30 - 08:20"
+          classroom: "",
+          students: "TDS2023-3S",
+          time: "19:00 - 19:50"
         }
       ]
     },
     {
       title: "Sexta-Feira",
-      timetable: [
-        {
-          subject: "Desenvolvimento para Dispositivos Móveis - 722",
-          size: 1,
-          teacher: "Rafael Luis Bartz",
-          classroom: "",
-          students: "TDS2023-3S",
-          time: "21:00 - 21:50"
-        }
-      ]
+      timetable: []
     }
   ],
   time: [
