--- a/docs/professor/rafael_silva_santos.mdx
+++ b/docs/professor/rafael_silva_santos.mdx
@@ -6,12 +6,12 @@ const data = {
       title: "Segunda-Feira",
       timetable: [
         {
-          subject: "Comércio Eletrônico e Mídias Digitais - 1499",
-          size: 1,
+          subject: "Informática Instrumental - 153",
+          size: 2,
           teacher: "Rafael Silva Santos",
           classroom: "",
-          students: "TGC2021",
-          time: "19:50 - 20:40"
+          students: "ELM2023",
+          time: "21:00 - 21:50"
         },
         {
           subject: "Prototipação de Interfaces e Interação Humano-Computador - 1251",
@@ -19,43 +19,17 @@ const data = {
           teacher: "Rafael Silva Santos",
           classroom: "",
           students: "IIW2021",
-          time: "09:25 - 10:15"
+          time: "10:15 - 11:05"
         }
       ]
     },
     {
       title: "Terça-Feira",
-      timetable: [
-        {
-          subject: "Informática Instrumental - 153",
-          size: 1,
-          teacher: "Rafael Silva Santos",
-          classroom: "",
-          students: "ELM2023",
-          time: "19:50 - 20:40"
-        },
-        {
-          subject: "Informática Instrumental - 153",
-          size: 1,
-          teacher: "Rafael Silva Santos",
-          classroom: "",
-          students: "ELM2023",
-          time: "21:00 - 21:50"
-        }
-      ]
+      timetable: []
     },
     {
       title: "Quarta-Feira",
-      timetable: [
-        {
-          subject: "Administração de Sistemas Operacionais e Redes - 1236",
-          size: 2,
-          teacher: "Rafael Silva Santos",
-          classroom: "",
-          students: "IIW2022A",
-          time: "07:30 - 08:20"
-        }
-      ]
+      timetable: []
     },
     {
       title: "Quinta-Feira",
@@ -69,16 +43,16 @@ const data = {
           time: "10:15 - 11:05"
         },
         {
-          subject: "Comércio Eletrônico e Mídias Digitais - 1499",
-          size: 1,
+          subject: "Administração de Sistemas Operacionais e Redes - 1236",
+          size: 2,
           teacher: "Rafael Silva Santos",
           classroom: "",
-          students: "TGC2021",
-          time: "21:00 - 21:50"
+          students: "IIW2022A",
+          time: "07:30 - 08:20"
         },
         {
           subject: "Comércio Eletrônico e Mídias Digitais - 1499",
-          size: 1,
+          size: 2,
           teacher: "Rafael Silva Santos",
           classroom: "",
           students: "TGC2021",
@@ -91,7 +65,7 @@ const data = {
       timetable: [
         {
           subject: "Comércio Eletrônico e Mídias Digitais - 1499",
-          size: 1,
+          size: 2,
           teacher: "Rafael Silva Santos",
           classroom: "",
           students: "TGC2021",
