--- a/docs/professor/sergio_augusto_dias_castro.mdx
+++ b/docs/professor/sergio_augusto_dias_castro.mdx
@@ -6,12 +6,29 @@ const data = {
       title: "Segunda-Feira",
       timetable: [
         {
+          subject: "Matemática III - 1244",
+          size: 2,
+          teacher: "Sérgio Augusto Dias Castro",
+          classroom: "",
+          students: "IIW2021",
+          time: "07:30 - 08:20"
+        }
+      ]
+    },
+    {
+      title: "Terça-Feira",
+      timetable: []
+    },
+    {
+      title: "Quarta-Feira",
+      timetable: [
+        {
           subject: "Matemática I - 1064",
           size: 2,
           teacher: "Sérgio Augusto Dias Castro",
           classroom: "",
           students: "IIW2023B",
-          time: "10:15 - 11:05"
+          time: "07:30 - 08:20"
         },
         {
           subject: "Matemática II - 1231",
@@ -19,49 +36,7 @@ const data = {
           teacher: "Sérgio Augusto Dias Castro",
           classroom: "",
           students: "IIW2022B",
-          time: "07:30 - 08:20"
-        }
-      ]
-    },
-    {
-      title: "Terça-Feira",
-      timetable: [
-        {
-          subject: "Fundamentos da Matemática - 599",
-          size: 1,
-          teacher: "Sérgio Augusto Dias Castro",
-          classroom: "",
-          students: "ELE2023",
-          time: "19:50 - 20:40"
-        },
-        {
-          subject: "Fundamentos da Matemática - 599",
-          size: 1,
-          teacher: "Sérgio Augusto Dias Castro",
-          classroom: "",
-          students: "ELE2023",
-          time: "21:50 - 22:40"
-        }
-      ]
-    },
-    {
-      title: "Quarta-Feira",
-      timetable: [
-        {
-          subject: "Matemática 1 - 142",
-          size: 2,
-          teacher: "Sérgio Augusto Dias Castro",
-          classroom: "",
-          students: "EIN2023",
-          time: "07:30 - 08:20"
-        },
-        {
-          subject: "Matemática III - 1244",
-          size: 2,
-          teacher: "Sérgio Augusto Dias Castro",
-          classroom: "",
-          students: "IIW2021",
-          time: "10:15 - 11:05"
+          time: "09:25 - 10:15"
         }
       ]
     },
@@ -70,11 +45,11 @@ const data = {
       timetable: [
         {
           subject: "Fundamentos da Matemática - 599",
-          size: 1,
+          size: 2,
           teacher: "Sérgio Augusto Dias Castro",
           classroom: "",
           students: "ELE2023",
-          time: "21:50 - 22:40"
+          time: "21:00 - 21:50"
         },
         {
           subject: "Matemática I - 1064",
@@ -99,11 +74,19 @@ const data = {
       timetable: [
         {
           subject: "Fundamentos da Matemática - 599",
-          size: 1,
+          size: 2,
           teacher: "Sérgio Augusto Dias Castro",
           classroom: "",
           students: "ELE2023",
-          time: "21:50 - 22:40"
+          time: "19:00 - 19:50"
+        },
+        {
+          subject: "Matemática 1 - 142",
+          size: 2,
+          teacher: "Sérgio Augusto Dias Castro",
+          classroom: "",
+          students: "EIN2023",
+          time: "10:15 - 11:05"
         }
       ]
     }
