--- a/docs/professor/sergio_takahashi.mdx
+++ b/docs/professor/sergio_takahashi.mdx
@@ -7,27 +7,19 @@ const data = {
       timetable: [
         {
           subject: "Desenho Técnico - 1529",
-          size: 1,
+          size: 2,
           teacher: "Sérgio Takahashi",
           classroom: "",
-          students: "EIN2023 - Grupo A",
-          time: "11:05 - 11:55"
-        },
-        {
-          subject: "Desenho Técnico - 1529",
-          size: 1,
-          teacher: "Sérgio Takahashi",
-          classroom: "",
-          students: "EIN2023 - Grupo B",
-          time: "08:20 - 09:10"
+          students: "EIN2023 - GA",
+          time: "09:25 - 10:15"
         },
         {
           subject: "Desenho Técnico - 2226",
-          size: 1,
+          size: 2,
           teacher: "Sérgio Takahashi",
           classroom: "",
           students: "ELE2023",
-          time: "21:50 - 22:40"
+          time: "21:00 - 21:50"
         }
       ]
     },
@@ -35,19 +27,32 @@ const data = {
       title: "Terça-Feira",
       timetable: [
         {
-          subject: "Desenho Técnico - 1529",
-          size: 1,
+          subject: "Processos de Fabricação 1 - 1552",
+          size: 2,
           teacher: "Sérgio Takahashi",
           classroom: "",
-          students: "EIN2023 - Grupo A",
-          time: "08:20 - 09:10"
+          students: "EIN2022",
+          time: "10:15 - 11:05"
+        }
+      ]
+    },
+    {
+      title: "Quarta-Feira",
+      timetable: [
+        {
+          subject: "Desenho Técnico - 1529",
+          size: 2,
+          teacher: "Sérgio Takahashi",
+          classroom: "",
+          students: "EIN2023 - GB",
+          time: "07:30 - 08:20"
         },
         {
-          subject: "Desenho Técnico - 2226",
-          size: 1,
+          subject: "Metrologia - 108",
+          size: 2,
           teacher: "Sérgio Takahashi",
           classroom: "",
-          students: "ELE2023",
+          students: "ELM2022",
           time: "21:00 - 21:50"
         },
         {
@@ -57,43 +62,6 @@ const data = {
           classroom: "",
           students: "EIN2022",
           time: "09:25 - 10:15"
-        },
-        {
-          subject: "Processos de Fabricação 1 - 1552",
-          size: 1,
-          teacher: "Sérgio Takahashi",
-          classroom: "",
-          students: "EIN2022",
-          time: "07:30 - 08:20"
-        }
-      ]
-    },
-    {
-      title: "Quarta-Feira",
-      timetable: [
-        {
-          subject: "Desenho Técnico - 2226",
-          size: 1,
-          teacher: "Sérgio Takahashi",
-          classroom: "",
-          students: "ELE2023",
-          time: "21:00 - 21:50"
-        },
-        {
-          subject: "Metrologia - 108",
-          size: 1,
-          teacher: "Sérgio Takahashi",
-          classroom: "",
-          students: "ELM2022",
-          time: "21:50 - 22:40"
-        },
-        {
-          subject: "Processos de Fabricação 1 - 1552",
-          size: 1,
-          teacher: "Sérgio Takahashi",
-          classroom: "",
-          students: "EIN2022",
-          time: "07:30 - 08:20"
         }
       ]
     },
@@ -105,24 +73,8 @@ const data = {
           size: 1,
           teacher: "Sérgio Takahashi",
           classroom: "",
-          students: "EIN2023 - Grupo B",
-          time: "11:05 - 11:55"
-        },
-        {
-          subject: "Desenho Técnico - 2226",
-          size: 1,
-          teacher: "Sérgio Takahashi",
-          classroom: "",
-          students: "ELE2023",
-          time: "21:00 - 21:50"
-        },
-        {
-          subject: "Metrologia - 108",
-          size: 1,
-          teacher: "Sérgio Takahashi",
-          classroom: "",
-          students: "ELM2022",
-          time: "21:50 - 22:40"
+          students: "EIN2023 - GA",
+          time: "10:15 - 11:05"
         }
       ]
     },
@@ -134,16 +86,16 @@ const data = {
           size: 1,
           teacher: "Sérgio Takahashi",
           classroom: "",
-          students: "EIN2023 - Grupo A",
-          time: "09:25 - 10:15"
+          students: "EIN2023 - GB",
+          time: "08:20 - 09:10"
         },
         {
-          subject: "Desenho Técnico - 1529",
-          size: 1,
+          subject: "Desenho Técnico - 2226",
+          size: 2,
           teacher: "Sérgio Takahashi",
           classroom: "",
-          students: "EIN2023 - Grupo B",
-          time: "07:30 - 08:20"
+          students: "ELE2023",
+          time: "21:00 - 21:50"
         }
       ]
     }
