--- a/docs/professor/tatiane_martinazzo_portz.mdx
+++ b/docs/professor/tatiane_martinazzo_portz.mdx
@@ -6,20 +6,12 @@ const data = {
       title: "Segunda-Feira",
       timetable: [
         {
-          subject: "Educação postural e Segurança no trabalho - 471",
-          size: 1,
-          teacher: "Tatiane Martinazzo Portz",
-          classroom: "",
-          students: "AGO2023",
-          time: "11:05 - 11:55"
-        },
-        {
           subject: "Horticultura - 1090",
-          size: 1,
+          size: 2,
           teacher: "Tatiane Martinazzo Portz",
           classroom: "",
           students: "AGO2021",
-          time: "09:25 - 10:15"
+          time: "13:10 - 14:00"
         }
       ]
     },
@@ -27,27 +19,19 @@ const data = {
       title: "Terça-Feira",
       timetable: [
         {
-          subject: "Agroecologia e DRS - 470",
+          subject: "Agroecologia e desenvolvimento rural sustentavel - 1462",
+          size: 2,
+          teacher: "Tatiane Martinazzo Portz",
+          classroom: "",
+          students: "AGR2023",
+          time: "21:00 - 21:50"
+        },
+        {
+          subject: "Educação postural e Segurança no trabalho - 471",
           size: 1,
           teacher: "Tatiane Martinazzo Portz",
           classroom: "",
           students: "AGO2023",
-          time: "10:15 - 11:05"
-        },
-        {
-          subject: "Agroecologia e desenvolvimento rural sustentavel - 1462",
-          size: 1,
-          teacher: "Tatiane Martinazzo Portz",
-          classroom: "",
-          students: "AGR2023",
-          time: "19:00 - 19:50"
-        },
-        {
-          subject: "Horticultura - 1090",
-          size: 1,
-          teacher: "Tatiane Martinazzo Portz",
-          classroom: "",
-          students: "AGO2021",
           time: "08:20 - 09:10"
         }
       ]
@@ -58,27 +42,18 @@ const data = {
     },
     {
       title: "Quinta-Feira",
-      timetable: [
-        {
-          subject: "Agroecologia e desenvolvimento rural sustentavel - 1462",
-          size: 1,
-          teacher: "Tatiane Martinazzo Portz",
-          classroom: "",
-          students: "AGR2023",
-          time: "19:50 - 20:40"
-        }
-      ]
+      timetable: []
     },
     {
       title: "Sexta-Feira",
       timetable: [
         {
           subject: "Agroecologia e DRS - 470",
-          size: 1,
+          size: 2,
           teacher: "Tatiane Martinazzo Portz",
           classroom: "",
           students: "AGO2023",
-          time: "08:20 - 09:10"
+          time: "09:25 - 10:15"
         }
       ]
     }
