--- a/docs/professor/wylliam_salviano_gongora.mdx
+++ b/docs/professor/wylliam_salviano_gongora.mdx
@@ -6,20 +6,12 @@ const data = {
       title: "Segunda-Feira",
       timetable: [
         {
-          subject: "Instrumentos de Medidas Elétricas - 1138",
-          size: 1,
+          subject: "Máquinas e Acionamentos - 1575",
+          size: 2,
           teacher: "Wylliam Salviano Gongora",
           classroom: "",
-          students: "ELE2023",
-          time: "19:00 - 19:50"
-        },
-        {
-          subject: "Instrumentos de Medidas Elétricas - 1138",
-          size: 1,
-          teacher: "Wylliam Salviano Gongora",
-          classroom: "",
-          students: "ELE2023",
-          time: "21:00 - 21:50"
+          students: "EIN2021",
+          time: "07:30 - 08:20"
         }
       ]
     },
@@ -28,19 +20,19 @@ const data = {
       timetable: [
         {
           subject: "Máquinas Elétricas e Acionamentos - 110",
-          size: 1,
+          size: 2,
           teacher: "Wylliam Salviano Gongora",
           classroom: "",
           students: "ELM2022",
-          time: "19:00 - 19:50"
+          time: "21:00 - 21:50"
         },
         {
           subject: "Máquinas elétricas - 2231",
-          size: 1,
+          size: 2,
           teacher: "Wylliam Salviano Gongora",
           classroom: "",
           students: "ELE2022",
-          time: "21:50 - 22:40"
+          time: "19:00 - 19:50"
         }
       ]
     },
@@ -48,37 +40,8 @@ const data = {
       title: "Quarta-Feira",
       timetable: [
         {
-          subject: "Instrumentos de Medidas Elétricas - 139",
-          size: 1,
-          teacher: "Wylliam Salviano Gongora",
-          classroom: "",
-          students: "ELM2023",
-          time: "21:50 - 22:40"
-        },
-        {
-          subject: "Máquinas e Acionamentos - 1575",
-          size: 1,
-          teacher: "Wylliam Salviano Gongora",
-          classroom: "",
-          students: "EIN2021",
-          time: "07:30 - 08:20"
-        },
-        {
           subject: "Máquinas elétricas - 2231",
-          size: 1,
-          teacher: "Wylliam Salviano Gongora",
-          classroom: "",
-          students: "ELE2022",
-          time: "21:00 - 21:50"
-        }
-      ]
-    },
-    {
-      title: "Quinta-Feira",
-      timetable: [
-        {
-          subject: "Máquinas elétricas - 2231",
-          size: 1,
+          size: 2,
           teacher: "Wylliam Salviano Gongora",
           classroom: "",
           students: "ELE2022",
@@ -87,31 +50,23 @@ const data = {
       ]
     },
     {
-      title: "Sexta-Feira",
+      title: "Quinta-Feira",
       timetable: [
         {
+          subject: "Instrumentos de Medidas Elétricas - 1138",
+          size: 2,
+          teacher: "Wylliam Salviano Gongora",
+          classroom: "",
+          students: "ELE2023",
+          time: "19:00 - 19:50"
+        },
+        {
           subject: "Instrumentos de Medidas Elétricas - 139",
-          size: 1,
+          size: 2,
           teacher: "Wylliam Salviano Gongora",
           classroom: "",
           students: "ELM2023",
-          time: "21:50 - 22:40"
-        },
-        {
-          subject: "Máquinas Elétricas e Acionamentos - 110",
-          size: 1,
-          teacher: "Wylliam Salviano Gongora",
-          classroom: "",
-          students: "ELM2022",
           time: "21:00 - 21:50"
-        },
-        {
-          subject: "Máquinas e Acionamentos - 1575",
-          size: 1,
-          teacher: "Wylliam Salviano Gongora",
-          classroom: "",
-          students: "EIN2021",
-          time: "11:05 - 11:55"
         },
         {
           subject: "Máquinas e Acionamentos - 1575",
@@ -120,16 +75,12 @@ const data = {
           classroom: "",
           students: "EIN2021",
           time: "09:25 - 10:15"
-        },
-        {
-          subject: "Máquinas elétricas - 2231",
-          size: 1,
-          teacher: "Wylliam Salviano Gongora",
-          classroom: "",
-          students: "ELE2022",
-          time: "19:00 - 19:50"
         }
       ]
+    },
+    {
+      title: "Sexta-Feira",
+      timetable: []
     }
   ],
   time: [
