--- a/docs/turma/ago2021.mdx
+++ b/docs/turma/ago2021.mdx
@@ -14,65 +14,20 @@ const data = {
           time: "07:30 - 08:20"
         },
         {
-          subject: "Matemática III - 1086",
-          size: 1,
-          teacher: "Elenice Josefa Kolancko Setti",
-          classroom: "",
-          students: "AGO2021",
-          time: "10:15 - 11:05"
-        },
-        {
-          subject: "Produção Animal II - 1093",
-          size: 1,
-          teacher: "Leiliane Cristine de Souza",
-          classroom: "",
-          students: "AGO2021",
-          time: "08:20 - 09:10"
-        },
-        {
-          subject: "Física III - 1084",
-          size: 1,
-          teacher: "Polyanna Guimarães e Miranda",
-          classroom: "",
-          students: "AGO2021",
-          time: "11:05 - 11:55"
-        },
-        {
-          subject: "Horticultura - 1090",
-          size: 1,
-          teacher: "Tatiane Martinazzo Portz",
-          classroom: "",
-          students: "AGO2021",
-          time: "09:25 - 10:15"
-        }
-      ]
-    },
-    {
-      title: "Terça-Feira",
-      timetable: [
-        {
           subject: "História II - 1089",
           size: 1,
           teacher: "Amilcar Machado Profeta Filho",
           classroom: "",
           students: "AGO2021",
-          time: "15:55 - 16:45"
-        },
-        {
-          subject: "Gestão e Empreendedorismo Rural - 1095",
-          size: 1,
-          teacher: "Cesar Gomes de Freitas",
-          classroom: "",
-          students: "AGO2021",
-          time: "10:15 - 11:05"
+          time: "08:20 - 09:10"
         },
         {
           subject: "Sociologia e extensão rural - 1087",
-          size: 1,
+          size: 2,
           teacher: "Elias Franco",
           classroom: "",
           students: "AGO2021",
-          time: "14:00 - 14:50"
+          time: "09:25 - 10:15"
         },
         {
           subject: "Cultura e Cinema Nacional III - 1193",
@@ -83,44 +38,49 @@ const data = {
           time: "11:05 - 11:55"
         },
         {
-          subject: "Biologia III - 1083",
-          size: 1,
-          teacher: "Leandro Luiz Borges",
-          classroom: "",
-          students: "AGO2021",
-          time: "07:30 - 08:20"
-        },
-        {
-          subject: "Orientação de estágio supervisionado - 1097",
-          size: 1,
-          teacher: "Octavio Henrique Viana",
+          subject: "Culturas II - 1091",
+          size: 2,
+          teacher: "Sônia Maria Mandotti",
           classroom: "",
           students: "AGO2021",
           time: "15:05 - 15:55"
         },
         {
-          subject: "Língua Portuguesa e Literatura III - 1081",
-          size: 1,
-          teacher: "Pedro Leites Junior",
+          subject: "Horticultura - 1090",
+          size: 2,
+          teacher: "Tatiane Martinazzo Portz",
+          classroom: "",
+          students: "AGO2021",
+          time: "13:10 - 14:00"
+        }
+      ]
+    },
+    {
+      title: "Terça-Feira",
+      timetable: [
+        {
+          subject: "Matemática III - 1086",
+          size: 2,
+          teacher: "Elenice Josefa Kolancko Setti",
           classroom: "",
           students: "AGO2021",
           time: "09:25 - 10:15"
         },
         {
-          subject: "Culturas II - 1091",
+          subject: "Filosofia III - 1088",
           size: 1,
-          teacher: "Sônia Maria Mandotti",
+          teacher: "Fabio Antônio da Silva",
           classroom: "",
           students: "AGO2021",
-          time: "13:10 - 14:00"
+          time: "11:05 - 11:55"
         },
         {
-          subject: "Horticultura - 1090",
-          size: 1,
-          teacher: "Tatiane Martinazzo Portz",
+          subject: "Biologia III - 1083",
+          size: 2,
+          teacher: "Leandro Luiz Borges",
           classroom: "",
           students: "AGO2021",
-          time: "08:20 - 09:10"
+          time: "07:30 - 08:20"
         }
       ]
     },
@@ -129,64 +89,19 @@ const data = {
       timetable: [
         {
           subject: "Educação Física III - 1082",
-          size: 1,
+          size: 2,
           teacher: "Bruna Valeriano da Silva Lisboa",
           classroom: "",
           students: "AGO2021",
           time: "09:25 - 10:15"
         },
         {
-          subject: "Agroindustrialização de Produtos de Origem Vegetal e Animal (APOVA) - 1094",
-          size: 1,
-          teacher: "Daniele de Almeida Paula",
-          classroom: "",
-          students: "AGO2021 - Grupo A",
-          time: "11:05 - 11:55"
-        },
-        {
-          subject: "Sociologia e extensão rural - 1087",
-          size: 1,
-          teacher: "Elias Franco",
-          classroom: "",
-          students: "AGO2021",
-          time: "08:20 - 09:10"
-        },
-        {
-          subject: "Agroindustrialização de Produtos de Origem Vegetal e Animal (APOVA) - 1094",
-          size: 1,
-          teacher: "Karen Cristina Guedes Silva",
-          classroom: "",
-          students: "AGO2021 - Grupo B",
-          time: "11:05 - 11:55"
-        },
-        {
-          subject: "Biologia III - 1083",
-          size: 1,
-          teacher: "Leandro Luiz Borges",
-          classroom: "",
-          students: "AGO2021",
-          time: "10:15 - 11:05"
-        },
-        {
-          subject: "Sanidade Animal - 1092",
-          size: 1,
-          teacher: "Leiliane Cristine de Souza",
+          subject: "Química III - 1085",
+          size: 2,
+          teacher: "Kathia Regina Kunzler Bechlin",
           classroom: "",
           students: "AGO2021",
           time: "07:30 - 08:20"
-        }
-      ]
-    },
-    {
-      title: "Quinta-Feira",
-      timetable: [
-        {
-          subject: "Educação Física III - 1082",
-          size: 1,
-          teacher: "Bruna Valeriano da Silva Lisboa",
-          classroom: "",
-          students: "AGO2021",
-          time: "13:10 - 14:00"
         },
         {
           subject: "Produção Animal II - 1093",
@@ -194,44 +109,41 @@ const data = {
           teacher: "Leiliane Cristine de Souza",
           classroom: "",
           students: "AGO2021",
-          time: "14:00 - 14:50"
-        },
+          time: "11:05 - 11:55"
+        }
+      ]
+    },
+    {
+      title: "Quinta-Feira",
+      timetable: [
         {
-          subject: "Sanidade Animal - 1092",
-          size: 1,
+          subject: "Produção Animal II - 1093",
+          size: 2,
           teacher: "Leiliane Cristine de Souza",
-          classroom: "",
-          students: "AGO2021",
-          time: "15:55 - 16:45"
-        },
-        {
-          subject: "Sanidade Animal - 1092",
-          size: 1,
-          teacher: "Leiliane Cristine de Souza",
-          classroom: "",
-          students: "AGO2021",
-          time: "08:20 - 09:10"
-        },
-        {
-          subject: "Mecanização Agrícola, Irrigação e Drenagem - 1096",
-          size: 1,
-          teacher: "Octavio Henrique Viana",
-          classroom: "",
-          students: "AGO2021",
-          time: "09:25 - 10:15"
-        },
-        {
-          subject: "Língua Portuguesa e Literatura III - 1081",
-          size: 1,
-          teacher: "Pedro Leites Junior",
           classroom: "",
           students: "AGO2021",
           time: "07:30 - 08:20"
         },
         {
+          subject: "Mecanização Agrícola, Irrigação e Drenagem - 1096",
+          size: 2,
+          teacher: "Octavio Henrique Viana",
+          classroom: "",
+          students: "AGO2021",
+          time: "10:15 - 11:05"
+        },
+        {
           subject: "Língua Portuguesa e Literatura III - 1081",
-          size: 1,
+          size: 2,
           teacher: "Pedro Leites Junior",
+          classroom: "",
+          students: "AGO2021",
+          time: "13:10 - 14:00"
+        },
+        {
+          subject: "Física III - 1084",
+          size: 2,
+          teacher: "Polyanna Guimarães e Miranda",
           classroom: "",
           students: "AGO2021",
           time: "15:05 - 15:55"
@@ -242,15 +154,7 @@ const data = {
           teacher: "Sônia Maria Mandotti",
           classroom: "",
           students: "AGO2021",
-          time: "11:05 - 11:55"
-        },
-        {
-          subject: "Culturas II - 1091",
-          size: 1,
-          teacher: "Sônia Maria Mandotti",
-          classroom: "",
-          students: "AGO2021",
-          time: "10:15 - 11:05"
+          time: "09:25 - 10:15"
         }
       ]
     },
@@ -259,75 +163,59 @@ const data = {
       timetable: [
         {
           subject: "Gestão e Empreendedorismo Rural - 1095",
-          size: 1,
+          size: 2,
           teacher: "Cesar Gomes de Freitas",
-          classroom: "",
-          students: "AGO2021",
-          time: "14:00 - 14:50"
-        },
-        {
-          subject: "Matemática III - 1086",
-          size: 1,
-          teacher: "Elenice Josefa Kolancko Setti",
-          classroom: "",
-          students: "AGO2021",
-          time: "13:10 - 14:00"
-        },
-        {
-          subject: "Filosofia III - 1088",
-          size: 1,
-          teacher: "Fabio Antônio da Silva",
-          classroom: "",
-          students: "AGO2021",
-          time: "15:05 - 15:55"
-        },
-        {
-          subject: "Química III - 1085",
-          size: 1,
-          teacher: "Kathia Regina Kunzler Bechlin",
-          classroom: "",
-          students: "AGO2021",
-          time: "11:05 - 11:55"
-        },
-        {
-          subject: "Química III - 1085",
-          size: 1,
-          teacher: "Kathia Regina Kunzler Bechlin",
-          classroom: "",
-          students: "AGO2021",
-          time: "08:20 - 09:10"
-        },
-        {
-          subject: "Produção Animal II - 1093",
-          size: 1,
-          teacher: "Leiliane Cristine de Souza",
-          classroom: "",
-          students: "AGO2021",
-          time: "15:55 - 16:45"
-        },
-        {
-          subject: "Sanidade Animal - 1092",
-          size: 1,
-          teacher: "Leiliane Cristine de Souza",
           classroom: "",
           students: "AGO2021",
           time: "10:15 - 11:05"
         },
         {
-          subject: "Mecanização Agrícola, Irrigação e Drenagem - 1096",
+          subject: "(APOVA) - 1094",
+          size: 1,
+          teacher: "Daniele de Almeida Paula",
+          classroom: "",
+          students: "AGO2021 - GA",
+          time: "07:30 - 08:20"
+        },
+        {
+          subject: "(APOVA) - 1094",
+          size: 1,
+          teacher: "Karen Cristina Guedes Silva",
+          classroom: "",
+          students: "AGO2021 - GB",
+          time: "07:30 - 08:20"
+        },
+        {
+          subject: "Sanidade Animal - 1092",
+          size: 2,
+          teacher: "Leiliane Cristine de Souza",
+          classroom: "",
+          students: "AGO2021",
+          time: "13:10 - 14:00"
+        },
+        {
+          subject: "Sanidade Animal - 1092",
+          size: 2,
+          teacher: "Leiliane Cristine de Souza",
+          classroom: "",
+          students: "AGO2021",
+          time: "15:05 - 15:55"
+        },
+        {
+          subject: "Orientação de estágio supervisionado - 1097",
           size: 1,
           teacher: "Octavio Henrique Viana",
           classroom: "",
           students: "AGO2021",
-          time: "07:30 - 08:20"
+          time: "09:25 - 10:15"
         },
         {
-          subject: "Física III - 1084",
+          subject: "Língua Portuguesa e Literatura III - 1081",
           size: 1,
-          teacher: "Polyanna Guimarães e Miranda",
+          teacher: "Pedro Leites Junior",
           classroom: "",
           students: "AGO2021",
-          time: "09:25 - 10:15"
+          time: "08:20 - 09:10"
         }
       ]
     }
