--- a/docs/turma/ago2023.mdx
+++ b/docs/turma/ago2023.mdx
@@ -6,24 +6,8 @@ const data = {
       title: "Segunda-Feira",
       timetable: [
         {
-          subject: "Educação Física I - 457",
-          size: 1,
-          teacher: "Bruna Valeriano da Silva Lisboa",
-          classroom: "",
-          students: "AGO2023",
-          time: "13:10 - 14:00"
-        },
-        {
-          subject: "Matemática I - 462",
-          size: 1,
-          teacher: "Elenice Josefa Kolancko Setti",
-          classroom: "",
-          students: "AGO2023",
-          time: "15:05 - 15:55"
-        },
-        {
           subject: "Biologia I - 459",
-          size: 1,
+          size: 2,
           teacher: "Eliana Peliçon Pereira Figueira",
           classroom: "",
           students: "AGO2023",
@@ -35,47 +19,15 @@ const data = {
           teacher: "Everaldo Lorensetti",
           classroom: "",
           students: "AGO2023",
-          time: "15:55 - 16:45"
+          time: "11:05 - 11:55"
         },
         {
-          subject: "Filosofia I - 464",
-          size: 1,
-          teacher: "Fabio Antônio da Silva",
-          classroom: "",
-          students: "AGO2023",
-          time: "14:00 - 14:50"
-        },
-        {
-          subject: "Língua Portuguesa e Literatura I - 455",
-          size: 1,
-          teacher: "Pedro Leites Junior",
-          classroom: "",
-          students: "AGO2023",
-          time: "08:20 - 09:10"
-        },
-        {
-          subject: "Física I - 460",
-          size: 1,
-          teacher: "Polyanna Guimarães e Miranda",
-          classroom: "",
-          students: "AGO2023",
-          time: "10:15 - 11:05"
-        },
-        {
-          subject: "Artes I - 458",
-          size: 1,
-          teacher: "Renata Carolina Pereira",
+          subject: "Química I - 461",
+          size: 2,
+          teacher: "Kathia Regina Kunzler Bechlin",
           classroom: "",
           students: "AGO2023",
           time: "07:30 - 08:20"
-        },
-        {
-          subject: "Educação postural e Segurança no trabalho - 471",
-          size: 1,
-          teacher: "Tatiane Martinazzo Portz",
-          classroom: "",
-          students: "AGO2023",
-          time: "11:05 - 11:55"
         }
       ]
     },
@@ -83,73 +35,20 @@ const data = {
       title: "Terça-Feira",
       timetable: [
         {
-          subject: "Língua estrangeira - Inglês - 456",
+          subject: "Filosofia I - 464",
           size: 1,
-          teacher: "Celina de Oliveira Barbosa Gomes",
-          classroom: "",
-          students: "AGO2023",
-          time: "08:20 - 09:10"
-        },
-        {
-          subject: "Geografia I - 463",
-          size: 1,
-          teacher: "Jhones Donizetti Mendes",
+          teacher: "Fabio Antônio da Silva",
           classroom: "",
           students: "AGO2023",
           time: "09:25 - 10:15"
         },
         {
           subject: "Informática instrumental e aplicada - 468",
-          size: 1,
+          size: 2,
           teacher: "Joaquim José Honório de Lima",
           classroom: "",
-          students: "AGO2023 - Grupo B",
-          time: "11:05 - 11:55"
-        },
-        {
-          subject: "Desenho técnico e topografia - 469",
-          size: 1,
-          teacher: "Octavio Henrique Viana",
-          classroom: "",
-          students: "AGO2023 - Grupo A",
-          time: "11:05 - 11:55"
-        },
-        {
-          subject: "Física I - 460",
-          size: 1,
-          teacher: "Polyanna Guimarães e Miranda",
-          classroom: "",
-          students: "AGO2023",
-          time: "07:30 - 08:20"
-        },
-        {
-          subject: "Agroecologia e DRS - 470",
-          size: 1,
-          teacher: "Tatiane Martinazzo Portz",
-          classroom: "",
-          students: "AGO2023",
+          students: "AGO2023 - GA",
           time: "10:15 - 11:05"
-        }
-      ]
-    },
-    {
-      title: "Quarta-Feira",
-      timetable: [
-        {
-          subject: "Língua estrangeira - Inglês - 456",
-          size: 1,
-          teacher: "Celina de Oliveira Barbosa Gomes",
-          classroom: "",
-          students: "AGO2023",
-          time: "09:25 - 10:15"
-        },
-        {
-          subject: "Informática instrumental e aplicada - 468",
-          size: 1,
-          teacher: "Joaquim José Honório de Lima",
-          classroom: "",
-          students: "AGO2023 - Grupo B",
-          time: "08:20 - 09:10"
         },
         {
           subject: "Cultura e Cinema Nacional I - 831",
@@ -157,68 +56,60 @@ const data = {
           teacher: "Josiane Paula Maltauro",
           classroom: "",
           students: "AGO2023",
-          time: "10:15 - 11:05"
-        },
-        {
-          subject: "Química I - 461",
-          size: 1,
-          teacher: "Kathia Regina Kunzler Bechlin",
-          classroom: "",
-          students: "AGO2023",
-          time: "11:05 - 11:55"
+          time: "07:30 - 08:20"
         },
         {
           subject: "Desenho técnico e topografia - 469",
-          size: 1,
+          size: 2,
           teacher: "Octavio Henrique Viana",
           classroom: "",
-          students: "AGO2023 - Grupo A",
-          time: "08:20 - 09:10"
+          students: "AGO2023 - GB",
+          time: "10:15 - 11:05"
         },
         {
-          subject: "Zootecnia Geral - 467",
+          subject: "Educação postural e Segurança no trabalho - 471",
           size: 1,
-          teacher: "Roberto Haruyoshi Ito",
+          teacher: "Tatiane Martinazzo Portz",
           classroom: "",
           students: "AGO2023",
-          time: "07:30 - 08:20"
+          time: "08:20 - 09:10"
         }
       ]
     },
     {
-      title: "Quinta-Feira",
+      title: "Quarta-Feira",
       timetable: [
         {
+          subject: "Matemática I - 462",
+          size: 2,
+          teacher: "Elenice Josefa Kolancko Setti",
+          classroom: "",
+          students: "AGO2023",
+          time: "07:30 - 08:20"
+        },
+        {
           subject: "Geografia I - 463",
-          size: 1,
+          size: 2,
           teacher: "Jhones Donizetti Mendes",
           classroom: "",
           students: "AGO2023",
-          time: "09:25 - 10:15"
+          time: "13:10 - 14:00"
         },
         {
           subject: "Informática instrumental e aplicada - 468",
-          size: 1,
+          size: 2,
           teacher: "Joaquim José Honório de Lima",
           classroom: "",
-          students: "AGO2023 - Grupo A",
-          time: "10:15 - 11:05"
-        },
-        {
-          subject: "Química I - 461",
-          size: 1,
-          teacher: "Kathia Regina Kunzler Bechlin",
-          classroom: "",
-          students: "AGO2023",
-          time: "11:05 - 11:55"
+          students: "AGO2023 - GB",
+          time: "15:05 - 15:55"
         },
         {
           subject: "Desenho técnico e topografia - 469",
-          size: 1,
+          size: 2,
           teacher: "Octavio Henrique Viana",
           classroom: "",
-          students: "AGO2023 - Grupo B",
-          time: "10:15 - 11:05"
+          students: "AGO2023 - GA",
+          time: "15:05 - 15:55"
         },
         {
           subject: "Língua Portuguesa e Literatura I - 455",
@@ -226,12 +117,41 @@ const data = {
           teacher: "Pedro Leites Junior",
           classroom: "",
           students: "AGO2023",
-          time: "08:20 - 09:10"
+          time: "09:25 - 10:15"
         },
         {
           subject: "Zootecnia Geral - 467",
-          size: 1,
+          size: 2,
           teacher: "Roberto Haruyoshi Ito",
+          classroom: "",
+          students: "AGO2023",
+          time: "10:15 - 11:05"
+        }
+      ]
+    },
+    {
+      title: "Quinta-Feira",
+      timetable: [
+        {
+          subject: "Educação Física I - 457",
+          size: 2,
+          teacher: "Bruna Valeriano da Silva Lisboa",
+          classroom: "",
+          students: "AGO2023",
+          time: "10:15 - 11:05"
+        },
+        {
+          subject: "Sociologia I - 465",
+          size: 1,
+          teacher: "Everaldo Lorensetti",
+          classroom: "",
+          students: "AGO2023",
+          time: "09:25 - 10:15"
+        },
+        {
+          subject: "Física I - 460",
+          size: 2,
+          teacher: "Polyanna Guimarães e Miranda",
           classroom: "",
           students: "AGO2023",
           time: "07:30 - 08:20"
@@ -242,36 +162,12 @@ const data = {
       title: "Sexta-Feira",
       timetable: [
         {
-          subject: "Educação Física I - 457",
-          size: 1,
-          teacher: "Bruna Valeriano da Silva Lisboa",
+          subject: "Língua estrangeira - Inglês - 456",
+          size: 2,
+          teacher: "Celina de Oliveira Barbosa Gomes",
           classroom: "",
           students: "AGO2023",
-          time: "15:05 - 15:55"
-        },
-        {
-          subject: "Matemática I - 462",
-          size: 1,
-          teacher: "Elenice Josefa Kolancko Setti",
-          classroom: "",
-          students: "AGO2023",
-          time: "15:55 - 16:45"
-        },
-        {
-          subject: "Biologia I - 459",
-          size: 1,
-          teacher: "Eliana Peliçon Pereira Figueira",
-          classroom: "",
-          students: "AGO2023",
-          time: "11:05 - 11:55"
-        },
-        {
-          subject: "Sociologia I - 465",
-          size: 1,
-          teacher: "Everaldo Lorensetti",
-          classroom: "",
-          students: "AGO2023",
-          time: "10:15 - 11:05"
+          time: "07:30 - 08:20"
         },
         {
           subject: "Filosofia I - 464",
@@ -279,35 +175,19 @@ const data = {
           teacher: "Fabio Antônio da Silva",
           classroom: "",
           students: "AGO2023",
-          time: "14:00 - 14:50"
-        },
-        {
-          subject: "Informática instrumental e aplicada - 468",
-          size: 1,
-          teacher: "Joaquim José Honório de Lima",
-          classroom: "",
-          students: "AGO2023 - Grupo A",
-          time: "09:25 - 10:15"
-        },
-        {
-          subject: "Desenho técnico e topografia - 469",
-          size: 1,
-          teacher: "Octavio Henrique Viana",
-          classroom: "",
-          students: "AGO2023 - Grupo B",
-          time: "09:25 - 10:15"
+          time: "11:05 - 11:55"
         },
         {
           subject: "Língua Portuguesa e Literatura I - 455",
-          size: 1,
+          size: 2,
           teacher: "Pedro Leites Junior",
           classroom: "",
           students: "AGO2023",
-          time: "07:30 - 08:20"
+          time: "15:05 - 15:55"
         },
         {
           subject: "Artes I - 458",
-          size: 1,
+          size: 2,
           teacher: "Renata Carolina Pereira",
           classroom: "",
           students: "AGO2023",
@@ -315,11 +195,11 @@ const data = {
         },
         {
           subject: "Agroecologia e DRS - 470",
-          size: 1,
+          size: 2,
           teacher: "Tatiane Martinazzo Portz",
           classroom: "",
           students: "AGO2023",
-          time: "08:20 - 09:10"
+          time: "09:25 - 10:15"
         }
       ]
     }
