--- a/docs/turma/iiw2021.mdx
+++ b/docs/turma/iiw2021.mdx
@@ -6,17 +6,9 @@ const data = {
       title: "Segunda-Feira",
       timetable: [
         {
-          subject: "Filosofia III - 1245",
-          size: 1,
-          teacher: "José Jurandir Pereira Junior",
-          classroom: "",
-          students: "IIW2021",
-          time: "11:05 - 11:55"
-        },
-        {
-          subject: "Desenvolvimento Responsivo e Otimização de Sites - 1249",
+          subject: "Química III - 1243",
           size: 2,
-          teacher: "Luis Henrique Manosso Von Mecheln",
+          teacher: "Kathia Regina Kunzler Bechlin",
           classroom: "",
           students: "IIW2021",
           time: "13:10 - 14:00"
@@ -27,44 +19,7 @@ const data = {
           teacher: "Milton Aparecido Azevedo",
           classroom: "",
           students: "IIW2021",
-          time: "15:05 - 15:55"
-        },
-        {
-          subject: "Física III - 1242",
-          size: 2,
-          teacher: "Polyanna Guimarães e Miranda",
-          classroom: "",
-          students: "IIW2021",
-          time: "07:30 - 08:20"
-        },
-        {
-          subject: "Prototipação de Interfaces e Interação Humano-Computador - 1251",
-          size: 2,
-          teacher: "Rafael Silva Santos",
-          classroom: "",
-          students: "IIW2021",
           time: "09:25 - 10:15"
-        }
-      ]
-    },
-    {
-      title: "Terça-Feira",
-      timetable: [
-        {
-          subject: "Biologia III - 1241",
-          size: 2,
-          teacher: "Gabriele Antico Freiria",
-          classroom: "",
-          students: "IIW2021",
-          time: "09:25 - 10:15"
-        },
-        {
-          subject: "Química III - 1243",
-          size: 2,
-          teacher: "Kathia Regina Kunzler Bechlin",
-          classroom: "",
-          students: "IIW2021",
-          time: "07:30 - 08:20"
         },
         {
           subject: "História III - 2236",
@@ -72,17 +27,41 @@ const data = {
           teacher: "Milton Aparecido Azevedo",
           classroom: "",
           students: "IIW2021",
-          time: "11:05 - 11:55"
+          time: "15:05 - 15:55"
+        },
+        {
+          subject: "Prototipação de Interfaces e Interação Humano-Computador - 1251",
+          size: 2,
+          teacher: "Rafael Silva Santos",
+          classroom: "",
+          students: "IIW2021",
+          time: "10:15 - 11:05"
+        },
+        {
+          subject: "Matemática III - 1244",
+          size: 2,
+          teacher: "Sérgio Augusto Dias Castro",
+          classroom: "",
+          students: "IIW2021",
+          time: "07:30 - 08:20"
         }
       ]
     },
     {
-      title: "Quarta-Feira",
+      title: "Terça-Feira",
       timetable: [
         {
           subject: "Sociologia II - 1246",
           size: 1,
           teacher: "Everaldo Lorensetti",
+          classroom: "",
+          students: "IIW2021",
+          time: "11:05 - 11:55"
+        },
+        {
+          subject: "Desenvolvimento Responsivo e Otimização de Sites - 1249",
+          size: 2,
+          teacher: "Luis Henrique Manosso Von Mecheln",
           classroom: "",
           students: "IIW2021",
           time: "09:25 - 10:15"
@@ -94,14 +73,35 @@ const data = {
           classroom: "",
           students: "IIW2021",
           time: "07:30 - 08:20"
-        },
+        }
+      ]
+    },
+    {
+      title: "Quarta-Feira",
+      timetable: [
         {
-          subject: "Matemática III - 1244",
+          subject: "Biologia III - 1241",
           size: 2,
-          teacher: "Sérgio Augusto Dias Castro",
+          teacher: "Gabriele Antico Freiria",
           classroom: "",
           students: "IIW2021",
-          time: "10:15 - 11:05"
+          time: "07:30 - 08:20"
+        },
+        {
+          subject: "Filosofia III - 1245",
+          size: 1,
+          teacher: "José Jurandir Pereira Junior",
+          classroom: "",
+          students: "IIW2021",
+          time: "11:05 - 11:55"
+        },
+        {
+          subject: "Física III - 1242",
+          size: 2,
+          teacher: "Polyanna Guimarães e Miranda",
+          classroom: "",
+          students: "IIW2021",
+          time: "09:25 - 10:15"
         }
       ]
     },
@@ -117,20 +117,20 @@ const data = {
           time: "11:05 - 11:55"
         },
         {
-          subject: "Sistemas Gerenciadores de Conteúdo WEB - 1252",
-          size: 2,
-          teacher: "Luis Henrique Manosso Von Mecheln",
-          classroom: "",
-          students: "IIW2021",
-          time: "07:30 - 08:20"
-        },
-        {
           subject: "Língua Portuguesa e Literatura III - 1240",
           size: 2,
           teacher: "Michelli Cristina Galli",
           classroom: "",
           students: "IIW2021",
           time: "09:25 - 10:15"
+        },
+        {
+          subject: "Geografia II - 1247",
+          size: 2,
+          teacher: "Renato Lada Guerreiro",
+          classroom: "",
+          students: "IIW2021",
+          time: "07:30 - 08:20"
         }
       ]
     },
@@ -143,7 +143,7 @@ const data = {
           teacher: "Caroline Domingues Porto do Nascimento Barbieri",
           classroom: "",
           students: "IIW2021",
-          time: "09:25 - 10:15"
+          time: "10:15 - 11:05"
         },
         {
           subject: "Filosofia III - 1245",
@@ -151,12 +151,12 @@ const data = {
           teacher: "José Jurandir Pereira Junior",
           classroom: "",
           students: "IIW2021",
-          time: "11:05 - 11:55"
+          time: "09:25 - 10:15"
         },
         {
-          subject: "Geografia II - 1247",
+          subject: "Sistemas Gerenciadores de Conteúdo WEB - 1252",
           size: 2,
-          teacher: "Renato Lada Guerreiro",
+          teacher: "Rafael Gil Ferques",
           classroom: "",
           students: "IIW2021",
           time: "07:30 - 08:20"
