--- a/docs/turma/iiw2022b.mdx
+++ b/docs/turma/iiw2022b.mdx
@@ -6,47 +6,18 @@ const data = {
       title: "Segunda-Feira",
       timetable: [
         {
-          subject: "Arte I - 1235",
-          size: 1,
-          teacher: "Josiane Paula Maltauro",
-          classroom: "",
-          students: "IIW2022B",
-          time: "09:25 - 10:15"
-        },
-        {
-          subject: "Administração de Sistemas Operacionais e Redes - 1236",
-          size: 2,
-          teacher: "Olavo José Luiz Junior",
-          classroom: "Laboratório de Informatica BioPark",
-          students: "IIW2022B",
-          time: "10:15 - 11:05"
-        },
-        {
-          subject: "Matemática II - 1231",
-          size: 2,
-          teacher: "Sérgio Augusto Dias Castro",
-          classroom: "",
-          students: "IIW2022B",
-          time: "07:30 - 08:20"
-        }
-      ]
-    },
-    {
-      title: "Terça-Feira",
-      timetable: [
-        {
-          subject: "Laboratório de Banco de Dados - 1238",
-          size: 2,
-          teacher: "Alexandre Rodrigues Monge",
-          classroom: "Laboratório de Informatica BioPark",
-          students: "IIW2022B",
-          time: "07:30 - 08:20"
-        },
-        {
           subject: "Projeto Integrador II - 1239",
           size: 2,
-          teacher: "Alexandre Rodrigues Monge",
-          classroom: "Laboratório de Informatica BioPark",
+          teacher: "Eduardo Alberto Felippsen",
+          classroom: "",
+          students: "IIW2022B",
+          time: "07:30 - 08:20"
+        },
+        {
+          subject: "Química II - 1230",
+          size: 2,
+          teacher: "Elizangela Cavazzini Cesca",
+          classroom: "",
           students: "IIW2022B",
           time: "10:15 - 11:05"
         },
@@ -57,6 +28,51 @@ const data = {
           classroom: "",
           students: "IIW2022B",
           time: "09:25 - 10:15"
+        },
+        {
+          subject: "Física II - 1229",
+          size: 2,
+          teacher: "Novo professor Física Biopark 2023",
+          classroom: "",
+          students: "IIW2022B",
+          time: "15:05 - 15:55"
+        },
+        {
+          subject: "Língua Portuguesa e Literatura II - 1226",
+          size: 2,
+          teacher: "Novo professor Portugues Biopark 2023",
+          classroom: "",
+          students: "IIW2022B",
+          time: "13:10 - 14:00"
+        }
+      ]
+    },
+    {
+      title: "Terça-Feira",
+      timetable: [
+        {
+          subject: "Laboratório de Banco de Dados - 1238",
+          size: 2,
+          teacher: "Alexandre Rodrigues Monge",
+          classroom: "",
+          students: "IIW2022B",
+          time: "07:30 - 08:20"
+        },
+        {
+          subject: "História II - 1234",
+          size: 1,
+          teacher: "Milton Aparecido Azevedo",
+          classroom: "",
+          students: "IIW2022B",
+          time: "11:05 - 11:55"
+        },
+        {
+          subject: "Desenvolvimento WEB Orientado a Objetos - 1237",
+          size: 2,
+          teacher: "Rafael Luis Bartz",
+          classroom: "",
+          students: "IIW2022B",
+          time: "09:25 - 10:15"
         }
       ]
     },
@@ -64,12 +80,12 @@ const data = {
       title: "Quarta-Feira",
       timetable: [
         {
-          subject: "História II - 1234",
+          subject: "Arte I - 1235",
           size: 1,
-          teacher: "Milton Aparecido Azevedo",
+          teacher: "Josiane Paula Maltauro",
           classroom: "",
           students: "IIW2022B",
-          time: "09:25 - 10:15"
+          time: "11:05 - 11:55"
         },
         {
           subject: "Física II - 1229",
@@ -96,12 +112,12 @@ const data = {
           time: "07:30 - 08:20"
         },
         {
-          subject: "Geografia I - 1233",
+          subject: "Matemática II - 1231",
           size: 2,
-          teacher: "Renato Lada Guerreiro",
+          teacher: "Sérgio Augusto Dias Castro",
           classroom: "",
           students: "IIW2022B",
-          time: "10:15 - 11:05"
+          time: "09:25 - 10:15"
         }
       ]
     },
@@ -117,10 +133,10 @@ const data = {
           time: "09:25 - 10:15"
         },
         {
-          subject: "Desenvolvimento WEB Orientado a Objetos - 1237",
+          subject: "Administração de Sistemas Operacionais e Redes - 1236",
           size: 2,
-          teacher: "Rafael Luis Bartz",
-          classroom: "Laboratório de Informatica BioPark",
+          teacher: "Olavo José Luiz Junior",
+          classroom: "",
           students: "IIW2022B",
           time: "10:15 - 11:05"
         },
@@ -138,14 +154,6 @@ const data = {
       title: "Sexta-Feira",
       timetable: [
         {
-          subject: "Química II - 1230",
-          size: 2,
-          teacher: "Elizangela Cavazzini Cesca",
-          classroom: "",
-          students: "IIW2022B",
-          time: "07:30 - 08:20"
-        },
-        {
           subject: "Arte I - 1235",
           size: 1,
           teacher: "Josiane Paula Maltauro",
@@ -154,28 +162,20 @@ const data = {
           time: "09:25 - 10:15"
         },
         {
-          subject: "Física II - 1229",
-          size: 2,
-          teacher: "Novo professor Física Biopark 2023",
-          classroom: "",
-          students: "IIW2022B",
-          time: "15:05 - 15:55"
-        },
-        {
-          subject: "Língua Portuguesa e Literatura II - 1226",
-          size: 2,
-          teacher: "Novo professor Portugues Biopark 2023",
-          classroom: "",
-          students: "IIW2022B",
-          time: "13:10 - 14:00"
-        },
-        {
           subject: "Administração de Sistemas Operacionais e Redes - 1236",
           size: 2,
           teacher: "Olavo José Luiz Junior",
-          classroom: "Laboratório de Informatica BioPark",
+          classroom: "",
           students: "IIW2022B",
           time: "10:15 - 11:05"
+        },
+        {
+          subject: "Geografia I - 1233",
+          size: 2,
+          teacher: "Renato Lada Guerreiro",
+          classroom: "",
+          students: "IIW2022B",
+          time: "07:30 - 08:20"
         }
       ]
     }
