--- a/docs/turma/iiw2023b.mdx
+++ b/docs/turma/iiw2023b.mdx
@@ -6,43 +6,6 @@ const data = {
       title: "Segunda-Feira",
       timetable: [
         {
-          subject: "Fundamentos de informática - 1076",
-          size: 2,
-          teacher: "Eduardo Alberto Felippsen",
-          classroom: "Laboratório de Informatica BioPark",
-          students: "IIW2023B",
-          time: "07:30 - 08:20"
-        },
-        {
-          subject: "Lingua estrangeira - Inglês - 1225",
-          size: 1,
-          teacher: "Novo professor Inglês Biopark 2023",
-          classroom: "",
-          students: "IIW2023B",
-          time: "09:25 - 10:15"
-        },
-        {
-          subject: "Matemática I - 1064",
-          size: 2,
-          teacher: "Sérgio Augusto Dias Castro",
-          classroom: "",
-          students: "IIW2023B",
-          time: "10:15 - 11:05"
-        }
-      ]
-    },
-    {
-      title: "Terça-Feira",
-      timetable: [
-        {
-          subject: "Química I - 1068",
-          size: 2,
-          teacher: "Elizangela Cavazzini Cesca",
-          classroom: "",
-          students: "IIW2023B",
-          time: "09:25 - 10:15"
-        },
-        {
           subject: "Filosofia I - 1139",
           size: 1,
           teacher: "Fabio Antônio da Silva",
@@ -65,6 +28,59 @@ const data = {
           classroom: "",
           students: "IIW2023B",
           time: "08:20 - 09:10"
+        },
+        {
+          subject: "Linguagens de apresentação e estruturação de conteúdos - 1074",
+          size: 2,
+          teacher: "Luis Henrique Manosso Von Mecheln",
+          classroom: "",
+          students: "IIW2023B",
+          time: "09:25 - 10:15"
+        },
+        {
+          subject: "Física I - 1070",
+          size: 2,
+          teacher: "Novo professor Física Biopark 2023",
+          classroom: "",
+          students: "IIW2023B",
+          time: "13:10 - 14:00"
+        },
+        {
+          subject: "Língua Portuguesa e Literatura I - 1069",
+          size: 2,
+          teacher: "Novo professor Portugues Biopark 2023",
+          classroom: "",
+          students: "IIW2023B",
+          time: "15:05 - 15:55"
+        }
+      ]
+    },
+    {
+      title: "Terça-Feira",
+      timetable: [
+        {
+          subject: "Projeto integrador I - 1078",
+          size: 2,
+          teacher: "Alexandre Rodrigues Monge",
+          classroom: "",
+          students: "IIW2023B",
+          time: "10:15 - 11:05"
+        },
+        {
+          subject: "Lógica de programação - 1075",
+          size: 2,
+          teacher: "Caroline Domingues Porto do Nascimento Barbieri",
+          classroom: "",
+          students: "IIW2023B",
+          time: "07:30 - 08:20"
+        },
+        {
+          subject: "Lingua estrangeira - Inglês - 1225",
+          size: 1,
+          teacher: "Novo professor Inglês Biopark 2023",
+          classroom: "",
+          students: "IIW2023B",
+          time: "09:25 - 10:15"
         }
       ]
     },
@@ -72,20 +88,20 @@ const data = {
       title: "Quarta-Feira",
       timetable: [
         {
-          subject: "Projeto integrador I - 1078",
+          subject: "Fundamentos de informática - 1076",
           size: 2,
           teacher: "Caroline Domingues Porto do Nascimento Barbieri",
-          classroom: "Laboratório de Informatica BioPark",
+          classroom: "",
           students: "IIW2023B",
           time: "09:25 - 10:15"
         },
         {
-          subject: "Linguagens de apresentação e estruturação de conteúdos - 1074",
-          size: 2,
-          teacher: "Luis Henrique Manosso Von Mecheln",
-          classroom: "Laboratório de Informatica BioPark",
+          subject: "História I - 1224",
+          size: 1,
+          teacher: "Milton Aparecido Azevedo",
+          classroom: "",
           students: "IIW2023B",
-          time: "07:30 - 08:20"
+          time: "11:05 - 11:55"
         },
         {
           subject: "Física I - 1070",
@@ -96,20 +112,20 @@ const data = {
           time: "15:05 - 15:55"
         },
         {
-          subject: "Lingua estrangeira - Inglês - 1225",
-          size: 1,
-          teacher: "Novo professor Inglês Biopark 2023",
-          classroom: "",
-          students: "IIW2023B",
-          time: "11:05 - 11:55"
-        },
-        {
           subject: "Língua Portuguesa e Literatura I - 1069",
           size: 2,
           teacher: "Novo professor Portugues Biopark 2023",
           classroom: "",
           students: "IIW2023B",
           time: "13:10 - 14:00"
+        },
+        {
+          subject: "Matemática I - 1064",
+          size: 2,
+          teacher: "Sérgio Augusto Dias Castro",
+          classroom: "",
+          students: "IIW2023B",
+          time: "07:30 - 08:20"
         }
       ]
     },
@@ -117,18 +133,18 @@ const data = {
       title: "Quinta-Feira",
       timetable: [
         {
-          subject: "História I - 1224",
+          subject: "Sociologia I - 1071",
           size: 1,
-          teacher: "Milton Aparecido Azevedo",
+          teacher: "Fabio Antônio da Silva",
           classroom: "",
           students: "IIW2023B",
           time: "11:05 - 11:55"
         },
         {
-          subject: "Lógica de programação - 1075",
+          subject: "Linguagens de apresentação e estruturação de conteúdos - 1074",
           size: 2,
-          teacher: "Rafael Luis Bartz",
-          classroom: "Laboratório de Informatica BioPark",
+          teacher: "Luis Henrique Manosso Von Mecheln",
+          classroom: "",
           students: "IIW2023B",
           time: "07:30 - 08:20"
         },
@@ -146,36 +162,20 @@ const data = {
       title: "Sexta-Feira",
       timetable: [
         {
-          subject: "Sociologia I - 1071",
+          subject: "Química I - 1068",
+          size: 2,
+          teacher: "Elizangela Cavazzini Cesca",
+          classroom: "",
+          students: "IIW2023B",
+          time: "09:25 - 10:15"
+        },
+        {
+          subject: "Lingua estrangeira - Inglês - 1225",
           size: 1,
-          teacher: "Fabio Antônio da Silva",
+          teacher: "Novo professor Inglês Biopark 2023",
           classroom: "",
           students: "IIW2023B",
           time: "11:05 - 11:55"
-        },
-        {
-          subject: "Linguagens de apresentação e estruturação de conteúdos - 1074",
-          size: 2,
-          teacher: "Luis Henrique Manosso Von Mecheln",
-          classroom: "Laboratório de Informatica BioPark",
-          students: "IIW2023B",
-          time: "07:30 - 08:20"
-        },
-        {
-          subject: "Física I - 1070",
-          size: 2,
-          teacher: "Novo professor Física Biopark 2023",
-          classroom: "",
-          students: "IIW2023B",
-          time: "13:10 - 14:00"
-        },
-        {
-          subject: "Língua Portuguesa e Literatura I - 1069",
-          size: 2,
-          teacher: "Novo professor Portugues Biopark 2023",
-          classroom: "",
-          students: "IIW2023B",
-          time: "15:05 - 15:55"
         },
         {
           subject: "Biologia I - 1073",
@@ -183,7 +183,7 @@ const data = {
           teacher: "Paula Magalhães Souza Deccache",
           classroom: "",
           students: "IIW2023B",
-          time: "09:25 - 10:15"
+          time: "07:30 - 08:20"
         }
       ]
     }
